--- a/_posts/2020-11-2-DCS界面.md
+++ b/_posts/2020-11-2-DCS界面.md
@@ -154,7 +154,27 @@ if (!blLegalNumber) //表示优化计算是否成功的布尔量
         }
 ```
 
-​    <center><img src="https://cdn.jsdelivr.net/gh/nanxi1234/nanxi1234.github.io/image/2021/20210314110428.png"/></center>
+-  变量表示
+
+测量：PV表示
+
+给定：SP表示
+
+输出：OP表示
+
+被控变量：CV
+
+操纵变量：MV
+
+扰动变量：DV
+
+控制方式：MD
+
+手动：MAN
+
+自动：AUTO
+
+串级：CAS
 
 
 
@@ -205,3 +225,24 @@ if (!blLegalNumber) //表示优化计算是否成功的布尔量
 储罐油：带中间缓冲罐或储罐的组分油 
 
 直调油：从上游装置经过管道之后直接进入静态混合器的组分油。直接参与调合的直调油流量不可控 , 而只能通过调节其余具有储罐或中间缓冲罐的组分油的流量来匹配直调油的流量的调合系统。
+
+
+
+###### 柴油组态逻辑
+
+- 用于监控多变量控制器的状态和性能，软测量模型预测和在线检验，系统通讯状况。
+- 多变量控制器的状态，包括主控制器和子控制器的状态
+- CV的被控或取消控制状态
+- DV的前馈控制或无前馈控制状态
+- MV的远程控制或DCS控制状态
+- 设置CV的控制目标和MV的操作区域限制
+- MV的操作模式切换、画面切换、紧急状况操作
+- 在线多变量控制器的通讯状况
+
+###### DCS的逻辑程序
+
+- 各种操作状态判断，转换
+- 控制器的状态判断和控制，如主控制器的四个状态：停止、备用、控制和优化和子控制器（APC控制和DCS控制）
+- watch Dog检查逻辑
+- MV的远程控制或DCS控制模式逻辑
+
