--- a/_posts/2020-11-2-数据结构与算法.md
+++ b/_posts/2020-11-2-数据结构与算法.md
@@ -409,6 +409,16 @@ public class SortDemo4 {
 
 #####  6.2.6 堆排序
 
+二叉堆是一组能够用堆有序的完全二叉树排序的元素，并在数组中按照层序存储，堆中k的节点的父节点的位置为k/2，而它的两个子节点的位置分别为2k和2k+1，我们可以通过计算数组的索引在树上下移动，从a[k]向上一层就令k=k/2，向下一层则令k等于2k或2k+1.
+
+- 上浮
+
+如果堆的有序状态因为某个节点变得比它的父节点更大而被打破，那么我们就需要交换它和它的父节点来修复堆，将这个节点不断向上移动直至遇到一个更大的父节点。
+
+- 下沉
+
+如果堆的有序状态因为某个节点变得比它的两个子节点或是其中之一更小了而被打破。可以通过将它与子节点中的较大者交换来恢复堆。
+
 ```java
 //构造大根堆（通过新插入的数上升）
 public static void heapInsert(int[] arr) {
