--- a/_posts/2020-11-2-DCS界面.md
+++ b/_posts/2020-11-2-DCS界面.md
@@ -176,7 +176,11 @@ if (!blLegalNumber) //表示优化计算是否成功的布尔量
 
 串级：CAS
 
+- 如果模式为 MANual，OP 可由操作员或用户程序存储； PV 和 SP 被忽略——如果主节点存在，它会进入初始化状态。
+- 如果模式为 AUTOmatic，则 SP（或 SPP）可由操作员或用户程序存储；如果主节点存在，它会进入初始化状态。 SP 包含以工程单位表示的设定点值，SPP 包含以百分比表示的值。
+- 如果模式为 CAScade，则从主节点拉取 SP；如果主节点失控（即处于非活动状态或正在初始化）或连接不良，则 PID 块调用超时处理。
 
+- 所需的输入数量由 PID 块的模式决定。 • 如果 Mode 是 CAScade，则需要两个输入 – PV 和 SP。 • 如果模式为AUTOmatic 或MANual，则只需要PV。 -SP 是一个可初始化的输入； PV 是不可初始化的。 -PV 必须从另一个块中拉出；您无法存储到它——通常它连接到辅助或数据采集 (DATAACQ) 块的输出。 − 如果 Mode 为 CAScade，则从另一个块中拉出 SP；如果 Mode 是 AUTOmatic，它可以由操作员或用户程序存储。 -PID块可能有一个primary或没有，取决于是否配置了SP；每个可初始化输入有一个主要的。
 
 ### 1.汽油调合优化控制系统
 
@@ -245,4 +249,25 @@ if (!blLegalNumber) //表示优化计算是否成功的布尔量
 - 控制器的状态判断和控制，如主控制器的四个状态：停止、备用、控制和优化和子控制器（APC控制和DCS控制）
 - watch Dog检查逻辑
 - MV的远程控制或DCS控制模式逻辑
+
+##### 安全部分
+
+###### MV的操作模式切换，紧急状况操作
+
+- 非CAS状态下紧急手动按钮复位
+
+- 调合头处属性报警
+- 密度报警
+- 操作模式切换：
+  - 当时发生紧急状况时自动切换到MAN模式
+  - Auto、Man、CAS三种模式的互相切换
+  - 优化开关自动切换
+
+###### 配方方案的切换
+
+- 当前配方方案切换成设置好的下一个配方方案
+
+###### DCS与后台优化软件连接检查
+
+- WatchDog检查逻辑
 
