--- a/_posts/2020-11-2-DCS界面.md
+++ b/_posts/2020-11-2-DCS界面.md
@@ -255,9 +255,9 @@ if (!blLegalNumber) //表示优化计算是否成功的布尔量
 ###### MV的操作模式切换，紧急状况操作
 
 - 非CAS状态下紧急手动按钮复位
-
 - 调合头处属性报警
 - 密度报警
+- ![image-20210912121114935](https://cdn.jsdelivr.net/gh/nanxi1234/nanxi1234.github.io/image/2021/20210912121122.png)
 - 操作模式切换：
   - 当时发生紧急状况时自动切换到MAN模式
   - Auto、Man、CAS三种模式的互相切换
@@ -266,6 +266,7 @@ if (!blLegalNumber) //表示优化计算是否成功的布尔量
 ###### 配方方案的切换
 
 - 当前配方方案切换成设置好的下一个配方方案
+- 初始配方与优化配方的切换
 
 ###### DCS与后台优化软件连接检查
 
