--- a/_posts/2021-6-18-项目相关.md
+++ b/_posts/2021-6-18-项目相关.md
@@ -1,10 +1,10 @@
 ---
-title: nowcoder-project
+title: mysql
 tags:
 
 ---
 
-
+![img](https://cdn.jsdelivr.net/gh/nanxi1234/nanxi1234.github.io/image/2021/20210915104010.webp)
 
 ##### 事务隔离
 
@@ -337,7 +337,7 @@ B+树：
 
 B+树与B树的区别？
 
-- B+树非叶子节点只存储关键字和指向子节点的指针，而B树还存储了卫星数据，在同样大小的情况下，B+树可以存储更多的节点元素。这就意味着，数据量相同的情况下，B+树的结构比B-树更加“矮胖”，因此查询时的IO次数也更少。
+- B+树非叶子节点只存储关键字和指向子节点的指针，而B树还存储了卫星数据，在同样大小的情况下，B+树可以存储更多的节点元素。这就意味着，数据量相同的情况下，B+树的结构比B-树更加“矮胖”，因此查询时的IO次数也更少。（InnoDB中一页（默认16k）可以存放上千个单元即指针，如果树的高度为3，那么叶子节点即可存放千万条数据。所以在InnoDB中B+树高度一般为1-3层，它就能满足千万级的数据存储。在查找数据时一次页的查找代表一次IO，所以通过主键索引查询通常只需要1-3次IO操作即可查找到数据。）
 - B+树的查询必须最终找到叶子节点，而B树只要找到匹配元素即可，所以B树的查找性能并不稳定，而B+树的每一次的查找都是稳定的。
 - 范围查询时，B树要依靠中序遍历，而B+树的范围查询只需要在链表上做遍历即可。
 
@@ -360,10 +360,38 @@ B+树与B树的区别？
 - 聚簇索引：又叫主键索引，每个表只有一个主键索引，叶子节点保存主键的值和数据。
 - 非聚簇索引：又叫辅助索引，叶子节点保存索引字段的值和主键的值
 
+聚集数据的优点：
+
+- 可以把相关的数据保存在一起
+- 数据访问更快
+- 使用覆盖索引扫描的查询可以直接使用页节点中的主键值
+
+面试题：
+
+innodb辅助索引为什么存主键id，回表不是浪费时间吗？
+
+- innodb二级索引的叶子节点存储的是主键值而不是*行指针*，并以此作为指向行的指针，这样的策略减少了当出现行移动或者数据页分裂（当行的主键值要求必须将这一行插入到某个已满的页中时，存储引擎会将该页分裂成两个页面来容纳该行，页分裂会导致表占用更多的磁盘空间）时二级索引的维护工作。使用主键索引值当作指针会让二级索引占用更多的空间，但是好处是Innodb在移动行时无需更新二级索引中的这个指针。
+- 节省空间：因为innodb数据本身就已经在主键索引的B+树上了，利用回表查询可以节省再存一份数据的空间
+- Innodb可以通过覆盖查询来避免对主键索引的二次查询
+
 ###### 前缀索引和覆盖索引
 
 - 前缀索引：对于列的值较常，比如BLOB、TEXT、VARCHAR，就必须建立前缀索引，即将值的前一部分为索引。这样既可节约时间，又可以提高查询效率。
-- 覆盖索引：select的数据列从索引中就能获得，不必再从数据库中获取。
+- 覆盖索引：select的数据列从索引中就能获得，不必再从数据库中获取。不是所有的索引都能成为覆盖索引，覆盖索引必须要存储索引列的值，因此只能用B-Tree索引作为覆盖索引
+
+###### 最左前缀匹配
+
+即最左优先，在检索数据时从联合索引的最左边开始匹配
+
+- 为什么要用联合索引？
+
+  减少开销，建一个联合索引，实际上相当于建立了（col1）、（col1,col2）、(col1,col2,col3)
+
+  每多一个索引，都会增加写操作的开销和磁盘空间的开销，对于大量数据的表，使用联合索引会大大减少开销。
+
+  效率高：两个单列查询返回行较多，同时查返回行较少，联合查询更高效
+
+  避免回表：如在user的id列建有索引，select id from user这个不用回表，直接从索引中读取id的值，而select id,name from user中，不能返回除id列其他的值，所以必须要回表。
 
 ###### 数据库三范式
 
@@ -385,6 +413,29 @@ B+树与B树的区别？
 
 - 反范式化的schema因为所有的数据都在一张表中，可以很好地避免关联
 - 数据重复冗余，对数据库的修改需要更多的成本
+
+###### Innodb的特点
+
+- 支持事务，采用MVCC来支持高并发，并且实现了四个标准的隔离级别，默认级别是可重复读，并且通过间隙锁策略防止幻读的出现
+- Innodb表基于聚簇索引建立，聚簇索引对主键查询有很高的性能，不过它的二级索引中必须包含主键列。
+- Innodb的存储格式是平台独立的
+- 支持外键约束
+
+###### Innodb的索引页
+
+<center><img src="https://cdn.jsdelivr.net/gh/nanxi1234/nanxi1234.github.io/image/2021/20210915202305.jpeg" alt="img" style="zoom:67%;" /></center>
+
+<center><img src="https://cdn.jsdelivr.net/gh/nanxi1234/nanxi1234.github.io/image/2021/20210915202928.jpeg" alt="img" style="zoom:67%;" /></center>
+
+###### Innodb行锁实现
+
+- 通过给索引上的索引项加锁来实现，只有通过索引条件检索数据，Innodb才使用行级锁，否则Innodb将会使用表锁。
+
+- 对有索引的键值加锁，会对所有涉及到的数据行加锁
+
+###### （next-key）间隙锁
+
+当用范围条件而不是想等条件检索数据，并请求共享或者排他锁时，Innodb对在范围内的数据记录的索引项加锁，对于不在范围内的但不存在的记录，叫做"间隙"，Innodb也会对这个间隙加锁，这就是间隙锁，它可以防止幻读的产生。
 
 ##### 数据库comment表的内容
 
