--- a/_posts/2020-11-2-设计模式.md
+++ b/_posts/2020-11-2-设计模式.md
@@ -57,10 +57,26 @@ public class Singleton {
 
 ```
 
-- 使用volatile
+- 双重加锁
 
 ```java
- private static Singleton uniqueInstance;//懒汉式，需要时才创建实例
+ public class Singleton {
+
+   private volatile static Singleton uniqueInstance;
+
+   private Singleton(){}
+
+   public static getInstance(){
+   if(uniqueInstance == null){
+   synchronized (Singleton.class){
+     if(uniqueInstance == null){
+      uniqueInstance = new Singleton();
+        }
+     }
+   }
+   return uniqueInstance;
+   }
+ }
 ```
 
 Volatile关键词确保：当uniqueInstance变量被初始化成singleton实例时，多个线程正确地处理uniqueInstance变量。性能上比sychronized要好。
