--- a/_posts/2021-09-13-redis.md
+++ b/_posts/2021-09-13-redis.md
@@ -1,8 +1,15 @@
 ---
 
 title: redis
-
 ---
+
+###### Redis简介
+
+Remote Dictionary Server(远程数据服务)，是一个基于内存且支持持久化的高性能key-value数据库，主要特征：
+
+- 多数据类型
+- 持久化机制
+- 主从同步
 
 ###### Redis支持哪几种数据类型？
 
@@ -17,13 +24,65 @@ title: redis
 多线程处理会涉及到锁，而且多线程处理会涉及到线程切换而消耗CPU，单线程的实现，CPU不会成为Redis的瓶颈，Redis的瓶颈最有可能是机器内存的大小或者网络带宽，既然单线程容易实现，而且CPU不会成为瓶颈，所以就采用单线程的方案。
 
 - 不需要各种锁的性能消耗，避免同步操作带来的性能消耗
-- 减少了CPU消耗
+- 避免了线程切换而消耗CPU，减少了CPU消耗
+
+###### Redis的线程模型
+
+Redis内部使用文件事件处理器file event handler，这个文件处理器是单线程的，它采用IO多路复用机制同时监听多个socket，根据socket上的事件来选择对应的事件处理器进行处理。
+
+文件事件处理器的结构包含4个部分：
+
+- 多个socket
+- IO复用程序
+- 文件事件分派器
+- 事件处理器（连接应答处理器，命令请求处理器，命令回复处理器）
+
+多个socket可能会产生不同的操作，每个操作对应不同的文件事件，但是IO多路复用程序会监听多个socket，将socket产生的事件放入队列中排队，事件分派器每次从队列中取出一个事件，把该事件交给对应的事件处理器进行处理。
+
+<center><img src="https://cdn.jsdelivr.net/gh/nanxi1234/nanxi1234.github.io/image/2021/20210917105630.png" alt="img" style="zoom:80%;" /></center>
+
+<center><img src="https://cdn.jsdelivr.net/gh/nanxi1234/nanxi1234.github.io/image/2021/20210917105815.png" alt="img" style="zoom:80%;" /></center>
+
+ 建立连接
+
+1. 首先，redis 服务端进程初始化的时候，会将 server socket 的 AE_READABLE 事件与连接应答处理器关联。
+2. 客户端 socket01 向 redis 进程的 server socket 请求建立连接，此时 server socket 会产生一个 AE_READABLE 事件，IO 多路复用程序监听到 server socket 产生的事件后，将该 socket 压入队列中。
+3. 文件事件分派器从队列中获取 socket，交给连接应答处理器。
+4. 连接应答处理器会创建一个能与客户端通信的 socket01，并将该 socket01 的 AE_READABLE 事件与命令请求处理器关联。
+
+ 执行一个set请求
+
+1. 客户端发送了一个 set key value 请求，此时 redis 中的 socket01 会产生 AE_READABLE 事件，IO 多路复用程序将 socket01 压入队列，
+2. 此时事件分派器从队列中获取到 socket01 产生的 AE_READABLE 事件，由于前面 socket01 的 AE_READABLE 事件已经与命令请求处理器关联，
+3. 因此事件分派器将事件交给命令请求处理器来处理。命令请求处理器读取 socket01 的 key value 并在自己内存中完成 key value 的设置。
+4. 操作完成后，它会将 socket01 的 AE_WRITABLE 事件与命令回复处理器关联。
+5. 如果此时客户端准备好接收返回结果了，那么 redis 中的 socket01 会产生一个 AE_WRITABLE 事件，同样压入队列中，
+6. 事件分派器找到相关联的命令回复处理器，由命令回复处理器对 socket01 输入本次操作的一个结果，比如 ok，之后解除 socket01 的 AE_WRITABLE 事件与命令回复处理器的关联。
 
 ###### Redis为什么快？
 
 - 基于内存，内存的读写速度非常快
 - 单线程，保证了每个操作的原子性，省去了线程上下文切换的时间
-- 采用IO多路复用，可以处理并发的连接
+- 非阻塞IO，内部采用采用epoll，epoll中的读、写、关闭、连接都转化了事件，利用epoll的IO多路复用特性，避免IO代价，可以处理并发的连接。
 
 ###### Io多路复用
+
+
+
+###### Redis优缺点
+
+优点：
+
+- 因为因为基于内存，因此读写性能优异
+- 支持持久化，支持AOF和RDB两种持久化方式
+- 支持事务，Redis的所有操作都是原子性的，同时Redis还支持对几个操作合并后的原子性执行。
+- 数据结构丰富
+- 支持主从复制，主机自动将数据同步到从机，可以进写读写分离
+
+缺点：
+
+- 受物理内存的限制，不能作为海量数据的高性能读写，适用于较小数据量的高性能操作和运算上。
+- 主从机的宕机都会导致前端部分读写请求失败
+- 主机宕机前若有部分数据未能及时同步到从机，切换IP后还会导致数据不一致的问题
+- Redis不支持在线扩容。在系统上线时必须确保有足够的空间。
 
