--- a/_posts/2020-11-2-DCS界面.md
+++ b/_posts/2020-11-2-DCS界面.md
@@ -234,39 +234,29 @@ if (!blLegalNumber) //表示优化计算是否成功的布尔量
 
 ###### 柴油组态逻辑
 
-- 用于监控多变量控制器的状态和性能，软测量模型预测和在线检验，系统通讯状况。
-- 多变量控制器的状态，包括主控制器和子控制器的状态
-- CV的被控或取消控制状态
-- DV的前馈控制或无前馈控制状态
-- MV的远程控制或DCS控制状态
-- 设置CV的控制目标和MV的操作区域限制
 - MV的操作模式切换、画面切换、紧急状况操作
-- 在线多变量控制器的通讯状况
-
-###### DCS的逻辑程序
 
 - 各种操作状态判断，转换
-- 控制器的状态判断和控制，如主控制器的四个状态：停止、备用、控制和优化和子控制器（APC控制和DCS控制）
 - watch Dog检查逻辑
-- MV的远程控制或DCS控制模式逻辑
 
 ##### 安全部分
 
 ###### MV的操作模式切换，紧急状况操作
 
-- 非CAS状态下紧急手动按钮复位
 - 调合头处属性报警
 - 密度报警
+- AUTO\CAS\MAN切换
 - ![image-20210912121114935](https://cdn.jsdelivr.net/gh/nanxi1234/nanxi1234.github.io/image/2021/20210912121122.png)
-- 操作模式切换：
-  - 当时发生紧急状况时自动切换到MAN模式
-  - Auto、Man、CAS三种模式的互相切换
-  - 优化开关自动切换
+- 配方异常手动
 
 ###### 配方方案的切换
 
 - 当前配方方案切换成设置好的下一个配方方案
 - 初始配方与优化配方的切换
+- ![image-20210917214359750](https://cdn.jsdelivr.net/gh/nanxi1234/nanxi1234.github.io/image/2021/20210917214359.png)
+- 是否启动配方
+
+![image-20210917214506582](https://cdn.jsdelivr.net/gh/nanxi1234/nanxi1234.github.io/image/2021/20210917214506.png)
 
 ###### DCS与后台优化软件连接检查
 
