--- a/_posts/2021-09-13-redis.md
+++ b/_posts/2021-09-13-redis.md
@@ -69,6 +69,51 @@ Redis内部使用文件事件处理器file event handler，这个文件处理器
 
 
 
+###### Redis持久化的方式
+
+- RDB
+
+为什么需要持久化？
+
+Redis是基于内存的数据库，如果不想办法将存储在内存中的数据库状态保存在磁盘中，那么一旦服务器进程退出，服务器中的数据库状态也会消失不见，为此，Redis提供了RDB持久化功能，这个功能可以将Redis在内存中的数据库状态保存到磁盘中，避免数据意外丢失。RDB生成的RDB文件是一个经过压缩的二进制文件，通过该文件可以还原生成RDB文件时的数据库状态。
+
+SAVE,BGSAVE命令的实现方式？
+
+有两个Redis命令可以用于生成RDB文件，一个是SAVE，一个是BGSAVE。
+
+SAVE会阻塞Redis服务器进程，知道RDB文件创建完毕，在创建期间，服务器不能处理任何命令请求。
+
+而BGSAVE命令会派生出一个子进程，然后由子进程负责创建RDB文件，服务器进程继续处理请求。
+
+RDB文件的载入工作是在服务器启动时自动执行的，所以Redis没有专门用来载入RDB文件的命令，只要Redis服务器在启动时检测到RDB文件存在，它就会自动载入RDB文件。，若有AOF会优先使用AOF，因为它的更新频率往往比RDB高。
+
+- AOF
+
+| appendfsync选项的值 |                     flushAppendOnlyFile                      |
+| :-----------------: | :----------------------------------------------------------: |
+|       always        |         将aof_buf缓存区中所有内容写入并同步到AOF文件         |
+|      everysec       | 将aof_buf缓冲区中的所有内容写入到aof文件，如果上次同步aof文件的时间距离现在超出一秒，那么再次对aof文件进行同步，并且这个同步操作是由一个线程专门负责 |
+|         no          |                只负责写，同步交由操作系统负责                |
+
+通过保存Redis服务器所执行的写命令来记录数据库状态，服务器在启动时，就可以载入和执行AOF文件中保存的命令来还原服务器关闭之前的数据库状态。
+
+实现原理：命令追加、文件写入、文件同步
+
+命令追加：服务器在执行完一个写命令之后，会以协议格式将被执行的写命令追加到服务器状态的aof-buf缓冲区的末尾
+
+文件写入与同步，fsync与fdatasync两个同步函数，可以强制让操作系统立即将缓存区中的数据写入到硬盘中。
+
+###### Redis内存淘汰策略
+
+- noeviction： 内存超过配置的时候会返回错误，不会删任何键
+- allkeys-lru：删掉最久未使用的键
+- volatile-lru:从设置了过期时间的键集合中删掉最久没有使用的键
+- allkeys-random：从所有键中随机删掉一个
+- volatile-random:从过期键的集合中随机删掉一个
+- volatile-ttl：删掉在过期集合的键，并且优先选择存活时间较短的键
+- allkeys-lfu:删掉使用频率最少的键
+- volatile-lfu：从配置了过期时间的键中删掉使用频率最少的键
+
 ###### Redis优缺点
 
 优点：
