--- a/_posts/2021-7-14-JUC.md
+++ b/_posts/2021-7-14-JUC.md
@@ -243,6 +243,8 @@ sleep：Thread
 
 乐观锁认为在自己使用数据时不会有别的线程修改数据，所以不会添加锁，只是在更新数据的时候去判断之前有没有别的线程更新了这个数据，如果这个数据没有被更新，当前线程将自己修改的数据成功写入，如果已更新，则根据不同的实现方式执行不同的操作（报错或者自动重试）。
 
+使用场景：乐观锁适用于读操作比较多的场景，多写的场景下用悲观锁比较合适。
+
 ###### 乐观锁是如何实现的？
 
 通过无锁编程来实现，最常用的是CAS算法，Java中原子类的递增操作就是通过CAS自旋实现的。
