--- a/_posts/2020-11-2-java容器.md
+++ b/_posts/2020-11-2-java容器.md
@@ -46,7 +46,7 @@ length的初始值为16
 
 什么是红黑树，讲一下？
 
-红黑树本质上就是一颗二叉查找树，但它在二叉查找树的基础上增加了着色和相关的性质，使得红黑树相对平衡，从而保证了红黑树的查找】插入、删除的时间复杂度最坏为O（logn）。
+红黑树本质上就是一颗二叉查找树，但它在二叉查找树的基础上增加了着色和相关的性质，使得红黑树相对平衡，从而保证了红黑树的查找\插入、删除的时间复杂度最坏为O（logn）。
 
 如何做到的？
 
