--- a/_posts/2021-09-13-redis.md
+++ b/_posts/2021-09-13-redis.md
@@ -15,8 +15,8 @@ Remote Dictionary Server(远程数据服务)，是一个基于内存且支持持
 
 - String：字符串
 - list：按添加顺序保持顺序的字符串列表
-- set：无序的字符串集合
-- sorted set:已排序的字符串集合
+- set：无序的String集合
+- sorted set（Zset）:已排序的String集合
 - hash：key-value对的一种集合
 
 ###### Redis为什么是单线程？
@@ -130,4 +130,26 @@ RDB文件的载入工作是在服务器启动时自动执行的，所以Redis没
 - 主从机的宕机都会导致前端部分读写请求失败
 - 主机宕机前若有部分数据未能及时同步到从机，切换IP后还会导致数据不一致的问题
 - Redis不支持在线扩容。在系统上线时必须确保有足够的空间。
+
+###### Redis跳表实现
+
+![img](https://cdn.jsdelivr.net/gh/nanxi1234/nanxi1234.github.io/image/2021/20210919164335.webp)
+
+![img](https://cdn.jsdelivr.net/gh/nanxi1234/nanxi1234.github.io/image/2021/20210919164417.webp)
+
+![img](https://cdn.jsdelivr.net/gh/nanxi1234/nanxi1234.github.io/image/2021/20210919164435.webp)
+
+每加一层索引，搜索的时间复杂度就降为原来的O（n/2），本质上是一种空间换时间的数据结构。能提高搜索效率。
+
+时间复杂度logn，空间复杂度n。
+
+- 插入数据
+
+如果一直加不更新索引层，会造成两个索引节点的中间数据非常多，相当于退化成了单链表。因此需要维护索引与原始链表大小之间的平衡，如果链表中节点多了，索引节点就相应地增加一些。
+
+- 为什么选择跳表实现有序集合
+
+- 哈希表是无序的，且只能查找单个 key，不适宜范围查找
+- 插入、删除、查找以及迭代输出有序序列这几个操作，红黑树也可以完成，时间复杂度跟跳表是一样的。但是，按照区间来查找数据这个操作，红黑树的效率没有跳表高（跳表只需要定位区间的起点，然后遍历就行了）
+- Redis 选跳表实现有序集合，还有其他各种原因，比如代码实现相对简单些，且更加灵活，它可以通过改变索引构建策略，有效平衡执行效率和内存消耗
 
