--- a/_posts/2020-11-2-Spring.md
+++ b/_posts/2020-11-2-Spring.md
@@ -232,3 +232,40 @@ public class Main {
 
 XmlBeanFactory对DefaultListableBeanFactory进行了拓展，主要用于从Xml文件中读取BeanDifinition，对于注册和获取bean都是使用从父类DefaultListableBeanFactory继承的方法去实现，唯一不同的就是增加了XmlBeanDefinition类型的reader属性对资源文件进行读取和注册。
 
+
+
+###### 动态代理（理解，基于反射机制）
+
+- 什么是反射？
+
+反射机制是在运行时，对于任意一个类，都能知道这个类的所有属性和方法;对于任意对象，都能调用它的任意一个方法。在java中，只要给定类的名字，就可以通过反射机制来获取类的所有信息。这种动态获取信息以及调用对象的方法称为java语言的反射机制。在运行时才知道要操作的类是什么，并且可以在运行时获取类的完整构造，并调用对应的方法。
+
+- 什么是动态代理？
+- 动态代理能做什么？
+
+JDK代理
+
+JDK代理主要涉及Java.lang.reflect包下的两个类Proxy和InvocationHandler。其中，InvocationHandler是一个接口，可以通过实现该接口定义横切逻辑，并通过反射机制调用目标类的代码，动态地将横切逻辑和业务逻辑编织在一起。
+
+JDK动态代理是基于接口实现的
+
+先定义一个接口和接口的实现类，然后再定义一个实现了InvacationHandler接口的实现类，然后再调用Proxy类的newInstance()方法即可。
+
+为什么JDK的动态代理只能基于接口实现，而不能基于继承来实现？
+
+因为java中不支持多继承，而JDK的动态代理在创建代理对象时，默认让代理对象继承了Proxy类，所以JDK只能通过接口去实现动态代理。要求代理对象和原对象有相同的方法签名，只有继承原对象的类和实现一组相同的接口。继承Proxy原因是需要判断某个对象是否是JDK动态代理生成的。
+
+先是Proxy对象的某个方法被调用，然后调用父类的invocationHandler.invoke()方法，因此当我们通过代理对象去执行目标对象的方法时，会先经过InvocationHandler的invoke()方法，然后再通过反射method.invoke()去调用真正的对象。
+
+使用反射性能较低，需要解析字节码，将内存中的对象进行解析。
+
+CGlib代理
+
+生成一个目标类的子类，然后重写子类方法来实现代理逻辑，由于通过继承来实现代理，所以static\private\final方法无法被代理。
+
+- 同一个类中，a方法没有切面，b方法有切面，a调用b会不会走切面
+
+通过外部调用方法B，是由于spring在启动时，根据切面类及注解，生成了DemoService的代理类，在调用方法B时，实际上是代理类先对目标方法进行了业务增强处理（执行切面类中的业务逻辑），然后再调用方法B本身。所以可以正常进入切面方法。
+
+通过外部调用的是方法A，虽然spring也会创建一个cglib的代理类去调用方法A，但当方法A调用方法B的时候，属于类里面的内部调用，使用的是实例对象本身去去调用方法B，非aop的cglib代理对象调用，方法B自然就不会进入到切面方法了。
+
