--- a/_posts/2021-09-13-redis.md
+++ b/_posts/2021-09-13-redis.md
@@ -148,8 +148,20 @@ RDB文件的载入工作是在服务器启动时自动执行的，所以Redis没
 如果一直加不更新索引层，会造成两个索引节点的中间数据非常多，相当于退化成了单链表。因此需要维护索引与原始链表大小之间的平衡，如果链表中节点多了，索引节点就相应地增加一些。
 
 - 为什么选择跳表实现有序集合
-
 - 哈希表是无序的，且只能查找单个 key，不适宜范围查找
 - 插入、删除、查找以及迭代输出有序序列这几个操作，红黑树也可以完成，时间复杂度跟跳表是一样的。但是，按照区间来查找数据这个操作，红黑树的效率没有跳表高（跳表只需要定位区间的起点，然后遍历就行了）
 - Redis 选跳表实现有序集合，还有其他各种原因，比如代码实现相对简单些，且更加灵活，它可以通过改变索引构建策略，有效平衡执行效率和内存消耗
 
+###### Redis的链表操作
+
+当一个列表键包含了数量比较多的元素。又或者列表中包含的元素都是比较长的字符串时，Redis就会用链表作为列表键的底层实现。
+
+lpush：插入
+
+lrange:遍历
+
+lpop:删除元素
+
+lindex：按下标选中list中的元素
+
+llen：查看list长度
