--- a/_posts/2021-6-18-计网.md
+++ b/_posts/2021-6-18-计网.md
@@ -111,3 +111,174 @@ tags:
 2. 为什么客户端在第四次挥手后还会等待 2MSL？
 
 等待 2MSL 是因为保证服务端接收到了 ACK 报文，因为网络是复杂的，很有可能 ACK 报文丢失了，如果服务端没接收到 ACK 报文的话，会重新发送 FIN 报文，只有当客户端等待了 2MSL 都没有收到重发的 FIN 报文时就表示服务端是正常收到了 ACK 报文，那么这个时候客户端就可以关闭了。
+
+###### HTTP 与HTTPS的区别
+
+HTTP是一种超文本传输协议，用于在两端之间传输文字、图片、音频、视频等超文本数据的约定和规范。
+
+HTTPS是比HTTP多了安全这个概念，实际上它是HTTP+TLS/SSL协议组合而成，而安全性的保证正是TSL/SSL所做的工作。
+
+区别：
+
+- HTTP是未经安全加密的协议，它的传输过程容易被攻击者监听，数据容易被窃取，发送方和接收方容易被伪造，而HTTPS是安全的协议，通过密钥交换算法+签名算法+对称加密算法+摘要算法解决这些问题。
+- HTTP的默认端口80，HTTPS默认是443
+
+
+
+##### TCP 拥塞控制
+
+###### 滑动窗口
+
+为了解决可靠传输以及包乱序的问题，TCP引入了滑动窗口的概念，在传输过程中，client和server协商接收窗口，再结合拥塞控制窗口cwnd计算滑动窗口swnd。在Linux中，滑动窗口cwnd是以包为单位。
+
+滑动窗口包含4部分：
+
+- 已收到ack确定的数据
+- 已发还没有收到ack的
+- 在窗口中还没有发出的（接受方还有空间）
+- 窗口以外的数据（接受方没空间）
+
+![img](https://cdn.jsdelivr.net/gh/nanxi1234/nanxi1234.github.io/image/2021/20210923143225.jpeg)
+
+![img](https://cdn.jsdelivr.net/gh/nanxi1234/nanxi1234.github.io/image/2021/20210923143232.jpeg)
+
+###### 包守恒原则
+
+TCP维护一个发送窗口，估计当前网络链路上能容纳的数据包数量，在有数据可发的情况下，确定一个包就发出一个数据包，总是保持发送窗口大小的包在网络中流动。
+
+传输的理想情况是要同时达到最大的吞吐量和最小的往返延迟，要实现，必须同时满足两个条件：
+
+- 以链路瓶颈带宽发包（带宽利用率最高）
+- 保证链路中没有缓存队列
+
+###### TCP拥塞控制
+
+- TCP所采用的方法是让每一个发送方根据所感知到的网络阻塞程度来限制其能向连接发送流量的速率
+- TCP发送方跟踪一个拥塞窗口cwnd，它对一个TCP发送方能向网络中发送流量的速率进行了限制。在一个发送方中未被确定的数据量不会超过cwnd(拥塞窗口)和rwnd（接收窗口）中的最小值
+- 将一个TCP发送方的丢包事件定义为：要么出现超时，要么收到来自接受方的三个冗余ACK，而丢包事件在发送方看来，是路径上出现了拥塞的一种指示。
+- TCP使用确定来触发它的窗口调节长度
+- TCP遵从下列指导性原则使发送方确定它应当发送的速率：
+
+      1. 一个丢死的报文端意味着阻塞，应当适当降低TCP发送方的速率
+         2. 一个确定报文段指示着一种顺利的信号，应当增加发送方的速率
+         3. 带宽探测：TCP发送方的行为是一个试探的过程，假如增加/降低了发送方的速率，TCP发送方会接着进行探测，从而考虑是否进一步的增加/降低。
+
+###### 慢启动
+
+- TCP连接开始时，cwnd的值通常被设为一个较小值，这使初始发送速率大约为MSS/RTT，但对于TCP发送方而言，可用带宽可能远大于MSS/RTT，因此TCP发送方希望尽可能快地找到可用带宽的数量。
+- 在慢启动状态，cwnd的值以一个MSS开始并且每当传输的报文段首次被确定就增加一个MSS，每经过一个RTT，发送速率就翻倍。TCP发送速率呈现指数级增长。
+
+![image-20210428103922153](https://cdn.jsdelivr.net/gh/nanxi1234/nanxi1234.github.io/image/2021/20210923153555.png)
+
+有下列三种改变状态的情况：
+
+- 如果存在超时指示的丢包事件，将cwnd置为1并重新开始慢启动过程，将第二个状态变量的值ssthresh（慢启动阈值）设置为cwnd/2。相当于用ssthresh标记一下可能快要出现超时的位置。
+- 当cwnd的值等于ssthresh时，结束慢启动并将TCP转移到拥塞避免模式。
+- 如果检测到三个冗余ACK，TCP反应相对不那么剧烈，而是将cwnd的值减半，再为三个冗余ACK加上三个MSS（最大报文段大小，TCP的报文段中的数据部分的最大字节数），再将ssthresh的值记录为cwnd的一半，最终进入快速恢复状态。
+
+###### 拥塞避免
+
+- 进入拥塞避免说明cwnd的值是上次遇到拥塞的值的一半，这意味着我们距离拥塞并不远，因此TCP不再选择每过一个RTT（往返时间）将将cwnd的值翻倍，而是每次（一个RTT）将cwnd的值增加一个MSS。
+
+- 有下列两种改变状态的情况
+
+  - **当出现超时丢包时，与慢启动情况一样，cwnd 的值置为一个 MSS，ssthresh 的值被更新为 cwnd 值的一半。最终进入慢启动状态。**
+  - **当出现三个冗余 ACK 事件的丢包时，TCP 反应相对不那么剧烈，而是将 cwnd 的值减半，再为三个冗余 ACK 加上三个 MSS。再将 ssthresh 的值记录为 cwnd 的一半。最终进入快速恢复状态。**
+
+###### 快速重传算法
+
+有时拥塞比较轻微，只有少量包丢失，后续的包能够正常到达，当后续的包到达接受方时，接收方会发现其Seq号比期望的大，所以它每收到一个包就Ack一次期望的Seq号，以此提醒发送方重传。当发送方收到3个或以上重复确认（Dup Ack）时，就意识到相应的包已经丢了，从而立即重传它。这个过程称为快速重传。
+
+为什么要规定凑满3个呢？这是因为网络包有时会乱序，乱序的包一样会触发重复的Ack，但是为了乱序而重传没有必要。由于一般乱序的距离不会相差太大，比如2号包也许会跑到4号包后面，但不太可能跑到6号包后面，所以限定成3个或以上可以在很大程度上避免因乱序而触发快速重传。
+
+如果2号和3号包都丢失了，但是后面4，5，6，7号都正常收到了，并触发了三次Ack2。在重传了2号包之后该传哪个包那，是全部需要重传还是只传2号包？
+
+为了解决这种问题，TCP在发送重复的Ack包的时候，会告诉接收方收到的已经收到包的序号，如下图
+
+<center><img src="https://cdn.jsdelivr.net/gh/nanxi1234/nanxi1234.github.io/image/2021/20210923162158.jpeg" alt="img" style="zoom:67%;" /></center>
+
+###### 快速恢复
+
+<center><img src="https://cdn.jsdelivr.net/gh/nanxi1234/nanxi1234.github.io/image/2021/20210923155741.jpg" alt="826489eb1561bb6a70dc219dcc67607" style="zoom:80%;" /></center>
+
+设计背景：当数据在网络中发生丢失时，由于还有部分数据还在互联网中向接收方流动，TCP协议并不想突然执行慢启动（cwnd设置为1）减少数据流的发送，这样由于网络的短暂波动影响了整条链路的数据发送。
+
+实现过程：
+
+- 当收到重复3次的ack时，ssthresh设置为cwnd的一半，并重传丢失的报文，同时设置cwnd = ssthresh + 3 * MSS
+
+- 同时，由于还有多个报文还在网络中传递，所以接收端还会继续的发送ack报文，发送端每收到一个ack，就将cwnd加一，并且发送一个新的分组。
+- 当接收端收到重传的数据包时，将会回复一个ack，这个ack不仅仅是对重传包的确认，而是对这一段时间内收到的所有报文进行确认。
+- 若ssthresh > cwnd 此时TCP进行拥塞避免算法。
+
+<center><img src="https://cdn.jsdelivr.net/gh/nanxi1234/nanxi1234.github.io/image/2021/20210923191643.png" alt="image-20210627222344287" style="zoom:80%;" /></center>
+
+###### HTTP状态码
+
+| 状态码 |             含义             |
+| :----: | :--------------------------: |
+|  1xx   |        请求正在被处理        |
+|  2xx   |         请求成功处理         |
+|  3xx   |  请求需要附加操作，如重定向  |
+|  4xx   | 客户端出错导致请求无法被处理 |
+|  5xx   |        服务端处理出错        |
+
+- 100 continue 继续，客户端继续其请求
+- 200 OK 请求成功，一般用于GET与POST请求
+- 307 临时重定向 使用GET请求重定向
+- 400 客户端请求的语法错误，服务器无法理解
+- 401 请求要求用户的身份认证
+- 403 服务器理解客户端的请求但是拒绝此请求
+- 404 服务器无法根据客户端的请求找到资源
+- 408 服务器等待客户端发送的请求时间过长，超时
+- 500 服务器内部错误，无法完成请求
+- 504 充当网关或代理的服务器，未及时从远端服务器获取请求
+
+##### HTTP报文格式
+
+###### 请求报文
+
+HTTP请求报文的**第一行叫做请求行**，其**后继的行叫做首部行**，请求行有三个字段：**方法字段、URL字段和HTTP版本字段**，方法字段包括GET\POST\HEAD\PUT\DELETE。在URL字段带有请求对象的标识。
+
+首部行指明对象所在的主机
+
+<center><img src="https://cdn.jsdelivr.net/gh/nanxi1234/nanxi1234.github.io/image/2021/20210923195539.jpg" alt="7f78af512ee7b3a46fb3d75b3b9255e" style="zoom:67%;" /></center>
+
+GET与POST的区别：
+
+- 使用GET方法时实体体为空，使用POST方法时才使用该实体体。
+
+- 当用户提交表单时，HTTP客户常用POST方法，使用POST报文时，用户仍可以向服务器请求一个Web页面，但Web页面的特定内容依赖于用户在表单字段中输入的内容，当方法字段的值为POST时，则实体类中包含的就是用户在表单字段中的输入值。
+- GET方法在所请求的URL中包含输入的数据。
+
+
+
+- HEAD：当服务器收到一个HEAD请求时，将会使用一个HTTP报文进行响应，但是不返回请求对象
+- PUT：允许用户上传对象到指定的Web服务器上指定的路径
+- DELETE：允许用户或者应用程序删除Web服务器上的对象
+
+
+
+###### 响应报文
+
+![4f042b484a821b422ad493ee835e585](https://cdn.jsdelivr.net/gh/nanxi1234/nanxi1234.github.io/image/2021/20210923201441.jpg)
+
+
+
+###### COOKIE 和 SESSION 的区别
+
+HTTP请求是无状态的，就是不知道这一次的请求和上一次请求是否有关系，比如登陆一个系统的时候，验证用户名密码之后，打开系统各个界面的时候就不用再登录了，实现这个需要用到Cookie和Session.
+
+Cookie由服务器生成，发送给浏览器，由浏览器保存，是下一次请求同一网站会把cookie发送给服务器。保存用户信息的一种机制，每种浏览器的大小都会有一些差异，一般不超过4kb。
+
+Session是在服务端保存，可以用于记录客户的状态，比如我们常用Session保存客户的基本信息、权限信息等；用户第一次登录之后，服务器就会创建一个session，浏览器再次访问时，只需从Session中查找该客户的信息就行了。
+
+Session机制的缺点：分布式环境下会导致Session的失效
+
+- session与cookie区别？
+
+1. Cookie在客户端，Session在服务端
+2. Cookie因为放在浏览器中，他人可以通过分析放在本地的Cookie进行Cookie欺骗，所以Cookie的安全性一般，而session是安全的
+3. 单个Cookie保存的数据不能超过4K，很多浏览器都限制一个站点最多保存20个Cookie，而session则存储在服务端，没有限制
+4. Session会在一定时间保存在服务器上，当访问量增加时，会比较占用服务器的性能，而cookie则不会
+5. 会话机制不同：session是一种服务端机制，用键值对的结构来保存信息，而cookie是服务器存储在本地计算机上的小块文本，并随着每个请求送到同一服务器。
