--- a/_posts/2021-7-14-JUC.md
+++ b/_posts/2021-7-14-JUC.md
@@ -949,3 +949,173 @@ class ProviderConsumerTest {
     }
 }
 ```
+
+
+
+  ##### BIO/NIO/AIO
+
+内核如何进行IO交互？
+
+1.网卡收到经过网线传来的网络数据，并将网络数据写到内存中。
+
+2.当网卡把数据写入到内存后，网卡向cpu发出一个中断信号，操作系统便能得知有新数据到来，再通过网卡中断程序去处理数据。
+
+3.将内存中的网络数据写入到对应socket的接收缓冲区中。
+
+4.当接收缓冲区的数据写好之后，应用程序开始进行数据处理
+
+- IO模型简介
+
+BIO：同步并阻塞----一个连接一个线程，即客户端有连接请求时服务器端就需要启动一个线程进行处理，如果这个连接不干任何事情就会造成不必要的线程开销。
+
+![BIO](https://cdn.jsdelivr.net/gh/nanxi1234/nanxi1234.github.io/image/2021/20210920204908.jpeg)
+
+NIO：同步非阻塞----一个线程处理多个连接，客户端发送的连接请求会被注册到多路复用器上，多路复用器轮询到IO请求就会进行处理。
+
+
+
+![NIO](https://cdn.jsdelivr.net/gh/nanxi1234/nanxi1234.github.io/image/2021/20210920205154.jpeg)
+
+AIO：异步非阻塞，有效的请求才启动线程，特点是先由操作系统完成后才通知服务端程序启动线程去处理，一般用于连接较多且连接时间较长的应用。
+
+使用场景：
+
+BIO：连接数较小且固定
+
+NIO：连接数较多且连接比较短
+
+AIO：连接数目多且连接数比较长
+
+
+
+###### BIO
+
+- accept，read都要阻塞
+- 服务端对于每个请求都要创建一个独立的线程
+- 并发数大，要创建大量的线程，系统资源占用大
+- 建立连接后，如果当前线程没有数据可读，则线程就阻塞在read上，造成线程资源的浪费
+
+###### NIO
+
+NIO新增了Channel、Selector、Buffer等抽象概念，支持面向缓冲、基于通道的I/O操作的方法。
+
+Java NIO 中的 Buffer 主要用于和 NIO 通道进行交互，数据是从通道读入到缓冲区的，然后从缓冲区中写入到通道中的
+
+NIO提供了与传统BIO模型中的Socket和ServerSocket相对应的SocketChannel和ServerSocketChannel两种不同的套接字通道实现。
+
+![图片](https://cdn.jsdelivr.net/gh/nanxi1234/nanxi1234.github.io/image/2021/20210924161648.webp)
+
+- Selector选择器
+
+也称多路复用器，用于检查一个或多个Channel（通道）的状态是否处于连接就绪、接受就绪、可读就绪、可写就绪。
+
+利用selector可以实现单线程管理多个channels，相比BIO，Selector使用更少的线程就可以处理通道。
+
+创建一个选择器：
+
+```java
+Selector selector = Selector.open();
+```
+
+注册一个通道到选择器中：
+
+```java
+//创建一个 TCP 套接字通道
+SocketChannel channel = SocketChannel.open();
+//调整通道为非阻塞模式
+channel.configureBlocking(false);
+//向选择器注册一个通道
+SelectionKey key = channel.register(selector, SelectionKey.OP_READ);
+```
+
+register方法就是用于注册当前实例通道到指定的选择器。
+
+当我们注册一个通道到选择器之后。就可以通过返回的SelectionKey实例监听该通道的各种事件。
+
+```java
+Set<SelectionKey> keys = selector.selectedKeys();
+```
+
+selectedKeys方法会返回选择器中注册成功的所有通道的SelectionKey实例集合，通过这个集合的SelectionKey实例，得到所有通道的事件就绪情况并进行相应的处理操作。
+
+- 1个线程能处理多个连接，这个线程不停循环遍历就行了
+- 单线程不停循环发起系统调用，一样会耗尽CPU资源
+- NIO的瓶颈：由于需要不停的调用系统调用，每个连接都需呀调系统调用询问是否有数据，很浪费资源，要是能明确地知道哪个连接有数据包过来，就不用一直遍历。
+
+###### AIO
+
+AIO采取订阅-通知模式：即应用程序向操作系统注册IO监听，然后继续做自己的事情，当操作系统发生IO事件，并且准备好数据之后，再主动通知应用程序，触发相应的函数
+
+![图片](https://cdn.jsdelivr.net/gh/nanxi1234/nanxi1234.github.io/image/2021/20210924164544.webp)
+
+实现：
+
+Windows:IOCP
+
+Linux:epoll
+
+- 多路复用之select、poll、epoll
+
+  文件描述符fd
+
+  文件描述符（File descriptor）是计算机科学中的一个术语，是一个用于表述指向文件的引用的抽象化概念。
+
+  文件描述符在形式上是一个非负整数。实际上，**它是一个索引值，指向内核为每一个进程所维护的该进程打开文件的记录表。当程序打开一个现有文件或者创建一个新文件时，内核向进程返回一个文件描述符**,文件描述符这一概念往往只适用于UNIX、Linux这样的操作系统
+
+1. select
+
+维护一个文件描述符数组，以此为基础，实现IO多路复用的功能，这个fd数组有长度限制。
+
+select方法被调用。首先要将fd数组从用户空间拷贝到内核空间，直到有一个fd活跃，或者超时，方法返回。
+
+select方法返回后，需要轮询fd数组，检查出发生IO事件的fd。
+
+缺点：
+
+- fd数组在用户空间和内核空间的频繁复制，效率低
+
+- 单个进程可监控的fd数量有限
+- 基于轮询实现，效率低
+
+2. poll
+
+poll也要进行数据结构的复制，依然是基于轮询来实现。但是使用的不是数组而是链表，所以从理论上讲，单个进程能监听的fd不再有数量的限制，但是轮询和数据结构的复制还是存在。
+
+3. epoll
+
+基于事件驱动实现，给每个fd注册一个回调函数，当fd对应的设备发生IO事件时，就会调用这个回调函数。把fd放到一个链表中，然后由客户端从该链表中取出一个个fd，达到O（1）的时间复杂度。
+
+epoll操作的三个函数：
+
+epoll_create
+
+在内核中创建一个存放fd节点的红黑树，后续如果有新增的fd节点，都会注册到这个epoll红黑树上。
+
+epoll_ctr
+
+select和poll会一次性将监听的所有的fd都复制到内核中，而epoll在需要添加一个新的fd时，会调用epoll_ctr,给这个fd注册一个回调函数，然后将该节点注册到内核中的红黑树中。当该fd对应的设备活跃时，会调用该fd上的回调函数，将该节点存放在一个就绪链表中，不需要在内核和用户空间中来回复制。
+
+epoll_wait
+
+直接从就绪链表中取节点，解决了轮询的问题，时间复杂度变成O（1）
+
+总结：
+
+- 没有最大并发连接的限制
+- 效率变高，因为基于事件驱动实现的，不会随着fd数量上升而效率下降
+- 减少内存拷贝的次数
+
+###### LT模式和ET模式
+
+LT（水平触发）模式：当被监控的文件描述符上有可读写事件发生时，`epoll_wait()会一直通知用户程序去读写`，如果这个描述符是用户不关心的，它每次都返回通知用户，则会导致用户对于关心的描述符的处理效率降低。这种模式下`要注意多次读写的情况下，效率和资源利用率情况`。select和poll都是使用的水平触发模式。
+
+ET（边缘触发）模式：当被监控的文件描述符上有可读写事件发生时，`epoll_wait()会通知用户程序去读写，它只会通知用户进程一次`，这需要用户一次把内容读取完，相当于水平触发，效率更高。如果用户一次没有读完数据，epoll_wait()再次请求时，不会立即返回，`直到该文件描述符上出现第二次可读写事件时才会通知你`。这种模式下`读写数据要注意一次是否能读写完成`。
+
+###### 总结
+
+`Java BIO`：同步并阻塞，服务器实现模式为一个连接一个线程，即客户端有连接请求时服务器端就需要启动一个线程进行处理，如果这个连接不做任何事情会造成不必要的线程开销，当然可以通过线程池机制改善。
+
+`Java NIO` ：同步非阻塞，服务器实现模式为一个请求一个线程，即客户端发送的连接请求都会注册到多路复用器上，多路复用器轮询到连接有I/O请求时才启动一个线程进行处理。
+
+`Java AIO(NIO.2)`：异步非阻塞，服务器实现模式为一个有效请求一个线程，客户端的I/O请求都是由OS先完成了再通知服务器应用去启动线程进行处理。
+
