--- a/_posts/2021-6-18-计网.md
+++ b/_posts/2021-6-18-计网.md
@@ -100,9 +100,11 @@ tags:
 
 第二次挥手：服务端收到关闭请求的时候可能这个时候数据还没发送完，所以服务端会先回复一个确认报文，表示自己知道客户端想要关闭连接了，但是因为数据还没传输完，所以还需要等待；
 
+close wait
+
 第三次挥手：当数据传输完了，服务端会主动发送一个 FIN 报文，告诉客户端，表示数据已经发送完了，服务端这边准备关闭连接了。
 
-第四次挥手：当客户端收到服务端的 FIN 报文过后，会回复一个 ACK 报文，告诉服务端自己知道了，再等待一会（2ms）就关闭连接。
+第四次挥手：当客户端收到服务端的 FIN 报文过后，会回复一个 ACK 报文，告诉服务端自己知道了，再等待一会（2MSL，即两个报文最大存活时间）就关闭连接。
 
 1. 为什么握手要三次，挥手却要四次呢？
 
@@ -111,6 +113,31 @@ tags:
 2. 为什么客户端在第四次挥手后还会等待 2MSL？
 
 等待 2MSL 是因为保证服务端接收到了 ACK 报文，因为网络是复杂的，很有可能 ACK 报文丢失了，如果服务端没接收到 ACK 报文的话，会重新发送 FIN 报文，只有当客户端等待了 2MSL 都没有收到重发的 FIN 报文时就表示服务端是正常收到了 ACK 报文，那么这个时候客户端就可以关闭了。
+
+###### 如何处理TimeWait过多？
+
+为什么需要TimeWait?
+
+网络情况不好时，如果主动方无time_wait等待，关闭前个连接后，主动方与被动方又建立起新的连接，这时被动方重传过来的Fin包过来会直接影响新的TCP连接
+
+
+
+1. 将请求头的头部的connection设置为keep-alive，保存存活一段时间
+2. 修改sysctl.conf文件，修改以下几个参数：
+
+- net.ipv4.tcp_tw_recycle = 1
+
+开启这个配置后，内核会快速的回收处于Time_wait状态的socket连接
+
+- net.ipv4.tcp_tw_refuse = 1（只适用主动发起连接的客户端）
+
+开启后总是自己先关闭连接，关闭后又不断的重新连接对方，当连接被复用了之后，延迟或重发的数据包到达，根据timestamp时间戳判断，当新连接建立后，时间戳更新为最新的时间，当延迟的报文段到达后，如果其时间戳是小于当前连接，这时TCP就可以将这个报文段直接丢弃。
+
+- net.ipv4.tcp_timestamp = 1
+
+两个4字节的时间戳字段，第一个4字节字段用来保存发送该数据包的时间，第二个4字节字段用来保存最近一次接收对方发送到数据的时间。
+
+
 
 ###### HTTP 与HTTPS的区别
 
