--- a/_posts/2020-11-2-设计模式.md
+++ b/_posts/2020-11-2-设计模式.md
@@ -69,7 +69,7 @@ public class Singleton {
    public static getInstance(){
    if(uniqueInstance == null){
    synchronized (Singleton.class){
-     if(uniqueInstance == null){
+     if(uniqueInstance == null){//避免再次实例化
       uniqueInstance = new Singleton();
         }
      }
@@ -79,7 +79,7 @@ public class Singleton {
  }
 ```
 
-Volatile关键词确保：当uniqueInstance变量被初始化成singleton实例时，多个线程正确地处理uniqueInstance变量。性能上比sychronized要好。
+Volatile关键词确保：当uniqueInstance变量被初始化成singleton实例时，多个线程正确地处理uniqueInstance变量，禁止重排序避免在线程A没完成变量初始化的情况下线程B看到instance已经赋值就拿来使用，因为instance没有完成初始化，所以使用过程中可能产生无法预料的后果。性能上比sychronized要好。
 
 ##### 工厂模式 Factory Pattern
 
