--- a/_posts/2021-6-18-计网.md
+++ b/_posts/2021-6-18-计网.md
@@ -20,6 +20,8 @@ tags:
 
 应用层、运输层、网络层、网路接口层
 
+![image.png](https://cdn.jsdelivr.net/gh/nanxi1234/nanxi1234.github.io/image/2021/20210925202652.webp)
+
 | OSI七层网络模型 | TCP/IP四层概念模型 | 对应网络协议 |
 | :-------------: | :----------------: | :----------: |
 |     应用层      |                    |  HTTP、FTP   |
@@ -309,3 +311,48 @@ Session机制的缺点：分布式环境下会导致Session的失效
 3. 单个Cookie保存的数据不能超过4K，很多浏览器都限制一个站点最多保存20个Cookie，而session则存储在服务端，没有限制
 4. Session会在一定时间保存在服务器上，当访问量增加时，会比较占用服务器的性能，而cookie则不会
 5. 会话机制不同：session是一种服务端机制，用键值对的结构来保存信息，而cookie是服务器存储在本地计算机上的小块文本，并随着每个请求送到同一服务器。
+
+###### 输入一个域名enter发生的事情
+
+- 查看浏览器缓存和本机缓存中有没有这个网址对应的IP地址，如果有直接获取
+
+- 如果没有则根据输入的域名通过DNS（主机名到IP地址转换的目录服务，运行在UDP之上，使用53号端口）去查IP地址
+
+1. 首先浏览器从URL中提取出主机名，并将主机名传给DNS应用的客户端
+2. 客户端向DNS服务器发送一个包含主机名的IP地址
+3. 本地的DNS服务器会接收到请求，会在本地先查询缓存中有没有当前域名和IP的映射关系，如果有直接返回IP信息，如果没有，则会依次对根DNS服务器、顶级DNS服务器、权威DNS服务器发起请求，最终获得IP地址。
+
+- HTTP请求
+
+1. 然后浏览器会构建并发送Http请求，HTTP请求报文的格式包括请求行、首部行、空行、实体体，其中请求行包括请求方法、请求URL、Http版本号。
+2. 在发送HTTP请求时，会先查询浏览器缓存（分为强缓存和协商缓存），会先查询缓存首先会根据http的首部行信息来判断是否存有强缓存（缓存是根据返回头中的 `Expires` 或者 `Cache-Control` 两个字段来控制的，都是表示资源的缓存有效时间），以及是否过期，如果有强缓存且未过期则命中，不会再发送给服务器，如果强缓存没命中，就向服务器发送请求，请求中的head首部行中会带有浏览器最后请求该资源的时间和一个资源检验码（使用资源修改时间、资源大小等信息生成），服务器收到请求后会判断协商缓存是否过期，如果过期则返回新的资源信息，如果没过期则返回304状态码，表示资源未更新，可以使用缓存中的资源。
+
+- TCP --->网络层连接:TCP三次握手
+- 网络层IP协议查询MAC地址
+
+1. IP协议的作用是把TCP分割好的各种数据包封装到IP包里面传送给接收方，而要保证确实能传到接受方还需要接收方的MAC地址，也就是物理地址，通过ARP协议将IP地址解析为对应的MAC地址，当通信的双方不在同一个局域网时需要多次中转才能到达最终的目标，在中转的过程中需要通过下一个中转站的MAC地址来搜索下一个中转目标
+
+- 数据到达链路层
+
+1. 在找到对方的MAC地址后，已被封装好的IP包再被封装到数据链路层的数据帧结构中，将数据发送到数据链路层传输，再通过物理层的比特流送出去，发送请求结束。
+2. （可不用记）这些分层的意义在于分工合作，数据链路层通过 CSMA/CD 协议保证了相邻两台主机之间的数据报文传递，而网络层的 IP 数据包通过不同子网之间的路由器的路由算法和路由转发，保证了互联网上两台遥远主机之间的点对点的通讯，不过这种传输是不可靠，于是可靠性就由传输层的 TCP 协议来保证，TCP 通过慢开始，乘法减小等手段来进行流量控制和拥塞避免，同时提供了两台遥远主机上进程到进程的通信，最终保证了 HTTP 的请求头能够被远方的服务器上正在监听的 HTTP 服务器进程收到，终于，数据包在跳与跳之间被拆了又封装，在子网与子网之间被转发了又转发，最后进入了服务器的操作系统的缓冲区，服务器的操作系统由此给正在被阻塞住的 accept 函数一个返回，将他唤醒。
+
+- 服务器响应
+
+  判断协商缓存是否过期，如果命中，则服务器返回 304 状态码，并且不会返回资源内容，浏览器会直接从缓存获取；否则服务器最终会返回资源的实际内容，并更新 header 中的相关缓存字段。如果过期了则返回最新的资源。
+
+- 页面渲染
+
+1. 浏览器收到响应后首先会根据返回的响应报文里的状态码做出判断，如果以1开头表示秦求正在处理中，以2开头表示请求处理成功，3开头表示需要附加操作比如重定向，4开头表示客户端的请求无法被处理，5开头说明服务器处理错误，最终得到文件之后进行TCP四次挥手，然后对它对其进行解析，渲染，生成页面。
+
+
+
+HTTPS
+
+
+
+###### 重定向
+
+![查缺补漏：一文看懂HTTP请求流程，不信你还不会](https://cdn.jsdelivr.net/gh/nanxi1234/nanxi1234.github.io/image/2021/20210925202537.jpeg)
+
+状态 301 就是告诉浏览器，我需要重定向到另外一个网址，而需要重定向的网址正是包含在响应头的 Location 字段中，接下来，浏览器获取 Location 字段中的地址，并使用该地址重新导航，这就是一个完整重定向的执行流程。
