--- a/_posts/2021-6-18-项目相关.md
+++ b/_posts/2021-6-18-项目相关.md
@@ -407,11 +407,61 @@ innodb辅助索引为什么存主键id，回表不是浪费时间吗？
 
   避免回表：如在user的id列建有索引，select id from user这个不用回表，直接从索引中读取id的值，而select id,name from user中，不能返回除id列其他的值，所以必须要回表。
 
+  最左匹配的原理深度解析
+
+  假设对（a,b）字段建立索引，有
+
+  <img src="https://cdn.jsdelivr.net/gh/nanxi1234/nanxi1234.github.io/image/2021/20210925170329.png" alt="39m1tvjfht" style="zoom:80%;" />
+
+  先按照a来排序，在a相等的情况下，才按b来排序
+
+  因此，a是有序的1，1，2，3，3，而b是全局无序，局部相对有序的状态
+
+  从全局来看，b的值是无序的，因此直接执行b=2，无法利用索引。
+
+  从局部来看，当a的值确定时，b是有序的，因此执行a = 1 and b =2时，a,b字段能用到索引，而执行a>1 and b = 2时，a字段能用到索引，b字段用不到索引。因为a的值是一个范围，不是固定的，在这个范围内b值不是有序的，因此b字段用不上索引。
+
+  因此在遇到范围查询时，就会停止匹配。
+
+  实战：
+
+  ```mysql
+  SELECT * FROM table WHERE a = 1 and b = 2 and c = 3;
+  ```
+
+  如何建立索引？
+
+  （a,b,c）/(b,a,c)/(c,b,a)等都行，重点是将区分度高的字段放在前面，区分度低的放后面
+
+  ```mysql
+  SELECT * FROM table WHERE a > 1 and b = 2; 
+  ```
+
+对（b,a）建立索引，选择（a,b）碰到范围查询b就走不了索引
+
+```mysql
+       SELECT * FROM `table` WHERE a > 1 and b = 2 and c > 3;
+```
+
+(b,a)或（b,c)           
+
+```mysql
+       SELECT * FROM `table` WHERE a = 1 ORDER BY b;
+```
+
+对a建立索引，因为a的值是一个范围，这个范围内的b是无序的，没必要对（a,b）建立索引  
+
+```mysql
+       SELECT * FROM `table` WHERE a IN (1,2,3) and b > 1; 
+```
+
+(a,b)
+
 ###### 数据库三范式
 
-1. **第一范式：** 确保每列的原子性，每列都是不可分割的最小数据单元
-2. **第二范式：** 在第一范式的基础上，要求每列都和主键相关
-3. **第三范式：** 在第二范式的基础上，要求其他列和主键是直接相关，而不是间接相关
+1. **第一范式：** 确保每列的原子性，每列都是不可分割的最小数据单元,就是说一个字段只能存储一项信息
+2. **第二范式：** 在第一范式的基础上，要求每列都和主键相关（完全依赖，直接间接都可以，如果不完全依赖可以拆分）
+3. **第三范式：** 在第二范式的基础上，要求其他列和主键是直接相关，而不是间接相关，如果是间接的就应该考虑拆分。
 
 分别说一下范式和反范式的优缺点？
 
