--- a/_posts/2020-11-2-计算机操作系统.md
+++ b/_posts/2020-11-2-计算机操作系统.md
@@ -218,6 +218,34 @@ MLFQ规则：
 
 
 
+###### 缺页中断
+
+在执行一条指令时，如果发现要访问的页没有在内存中，那么停止该指令的执行，并产生一个页不存在异常，对应的故障处理程序可通过从磁盘中加载到该页的方法来排除故障。如果内存中的物理页都已经分配出去，就要按照某种策略来废弃某个页面，将其占据的物理页释放出来。
+
+###### 页面置换算法
+
+- 最佳置换算法
+
+从主存中移出永远不再需要的页面，如无这样的页面存在，则选择最长时间不需要访问的页面，这样可以保证获得最低的缺页率。由于未来的访问是无法知道的，因此最佳置换算法无法实现，但可以用于比较，以了解新策略的性能到底如何。
+
+- FIFO
+
+先进先出算法：当需要淘汰一个页时，最早调入内存的页面被置换，性能不行，因为根本无法确定页的重要性，即使页0已被访问多次，FIFO依然会将它踢出去，只因为它是第一个进入内存的。
+
+- LRU（最久未使用）
+
+最久未使用通过历史的访问情况作为参考，如果一个程序在过去访问过某个页，则很有可能在不久的将来会再次访问该页
+
+- 时钟页面置换算法
+
+LRU算法虽好，但是需要在每次页访问的时候更新一些数据，以了解哪些页是最少和最近被使用的。并且在置换时要找出最久未使用的页，如果遍历的话，需要花费大量的时间，加HashMap的话也会消耗大量的空间。为了避免时间或空间上的消耗，我们采用时钟置换算法，它找到差不多旧的页来置换。
+
+思想：在硬件中为每一个页增加一个使用位，每当页被读或写时，硬件将使用位置为1。将系统中所有的页都放在一个循环列表中，时钟指针开始时指向某个特定的页，当必须要进行页置换时，操作系统检查当前指向的页的使用位，如果该页使用位是0则立即置换，如果是1，则将该页的使用位置为0，时钟指针指向下一页直到找到一个使用位为0的页。
+
+- 考虑脏页的时钟页面算法
+
+对内存中的页是否被修改的额外考虑，如果页已经被修改，则踢出它时就必须将它写回磁盘，这很昂贵，但是如果它是干净的，踢出去就没有成本为每个页增加一个脏位，优先将干净且未使用的页踢出去，无法找到这种页时，再查找脏的未使用的页。
+
 
 
 
