--- a/_posts/2021-6-18-虚拟机.md
+++ b/_posts/2021-6-18-虚拟机.md
@@ -198,7 +198,7 @@ CPU缓存是以缓存行（Cache line）为最小数据单位，缓存行是2的
 
 增量更新：当黑色对象插入新的指向白色对象的引用关系时，就将这个新插入的引用记录下来，并发扫描结束后，再以记录过的引用关系中的黑色对象为根，重新扫描一次。简化：黑色对象一旦新插入指向白色对象的引用后，它就变回灰色对象了。
 
-原始快照：当灰色对象要删除指向白色对象的引用关系时，就将这个要删除的引用记下来，扫描完成之后再将灰色对象为根从新扫描一次，，简化：无论删不删，都按照刚开始扫描的那一刻对象图快照进行扫描。
+原始快照：当灰色对象要删除指向白色对象的引用关系时，就将这个要删除的引用记下来，扫描完成之后再将灰色对象为根从新扫描一次，简化：无论删不删，都按照刚开始扫描的那一刻对象图快照进行扫描。
 
 ###### GC Roots 对象包括哪些？
 
