--- a/_posts/2021-6-18-计网.md
+++ b/_posts/2021-6-18-计网.md
@@ -1,8 +1,5 @@
----
 title: 计网
 tags:
- 
----
 
 
 
@@ -347,12 +344,43 @@ Session机制的缺点：分布式环境下会导致Session的失效
 
 
 
-HTTPS
+###### HTTPS
+
+HTTP+SSL协议进行加密
+
+![mloginfful](https://cdn.jsdelivr.net/gh/nanxi1234/nanxi1234.github.io/image/2021/20210926195847.jpeg)
+
+HTTP明文传输数据，容易被抓包，因此需要对数据进行加密
+
+如何加密？
+
+- 对称加密
+
+在客户端发送数据之前，服务器将生成的密钥传输给客户端，在之后客户端发送数据的时候使用该密钥进行加密，之后客户端与服务端的数据传输就使用该密钥进行加解密（就是说双方都用一个密钥），server和所有的client都采用一个密钥，在密钥被劫取之后可以使用密钥对数据解密。
+
+- 非对称加密
+
+在传输数据的时候客户端先将自己的公钥交给服务器，服务器使用公钥对数据进行加密。客户端收到之后再用自己的私钥进行解密（公钥和私钥是一对，如果用私钥加密后的密文，只要是公钥，都可以解密，但是如果是公钥对数据进行加密，只有用对应的私钥才能解密，因为加密和解密的是两个不同的密钥，因此叫做非对称加密算法），相反客户端向服务器传输也是一样，但是问题在于加密的速度慢了很多倍。
+
+*A（客户）想给B（服务器）发送一段文字，但是不想让别人看到，因此想使用非对称加密方法来加密这段文字，当然，B需要有一对公钥和私钥：*
+*①、B将他的公钥发送给A*
+*②、A用B给他的公钥加密这段文字，然后传给B*
+*③、B用他的私钥解密A发过来的消息，这里要强调的是，只要B的私钥不泄露，这封信就是安全的，即使落在别人手里，也无法解密。*
+*通过这几步，B就能成功收到A发送的信息，同时又达到了保密的目的。*
+
+- 数字证书
 
 
+
+![在这里插入图片描述](https://ewr1.vultrobjects.com/imgur4/000/013/903/179_593_56f.png)
+
+
+
+![在这里插入图片描述](https://ewr1.vultrobjects.com/imgur4/000/013/903/180_a2d_e1d.png)
 
 ###### 重定向
 
 ![查缺补漏：一文看懂HTTP请求流程，不信你还不会](https://cdn.jsdelivr.net/gh/nanxi1234/nanxi1234.github.io/image/2021/20210925202537.jpeg)
 
 状态 301 就是告诉浏览器，我需要重定向到另外一个网址，而需要重定向的网址正是包含在响应头的 Location 字段中，接下来，浏览器获取 Location 字段中的地址，并使用该地址重新导航，这就是一个完整重定向的执行流程。
+
