--- a/_posts/2020-11-1-Java基础.md
+++ b/_posts/2020-11-1-Java基础.md
@@ -560,3 +560,66 @@ String s3 = new String(“happened”);//String对象创建
 //当对象的引用变量指向对象时，两者就联系起来，改变引用的属性就会改变对象的属性
 ```
 
+##### 多态
+
+在面向对象语言中，接口的不同实现方式即为多态，就是说多个对象调用同一个方法，得到不同的结果。即一个引用变量到底会指向哪个类的实例对象，该引用变量发出的方法调用到底是哪个类中实现的方法，必须在程序运行期间才能决定。
+
+语法：父类类名 = new 子类类名()；
+
+该引用名称只能访问父类中的属性和方法，但是访问时，会优先访问子类重写以后的方法。
+
+条件：
+
+- 子类必须继承父类
+- 子类必须重写父类的方法
+- 父类引用指向子类对象
+
+实现方式：
+
+接口，普通子类重写父类的方法
+
+###### 封装
+
+将数据和行为组合在一个包中，并对对象的使用者隐藏具体的实现细节，实现封装的关键在于，绝对不能让类中的方法直接访问其它类的实例字段，程序只能通过对象的方法与对象数据进行交互。
+
+- 减少耦合
+- 隐藏实现细节
+
+###### 继承
+
+如果子类继承了父类，那么子类就可以复用父类的属性与方法，并且可以在这个基础上新增方法和属性，java中只能继承一个父类
+
+- 提高代码复用性
+
+
+
+###### 面向对象
+
+将重点放在对象和对象的接口上
+
+
+
+###### static
+
+- static修饰的方法（在类加载前就已经存在），变量可以在没有建立对象的状况下进行调用
+
+- static语句块：静态语句块在类初始化的时候仅执行一次
+- 静态内部类：静态内部类不依赖于外部类，但是不能访问外部类的非静态的变量和方法。
+- 初始化顺序：静态变量和静态语句块优先于实例变量和普通语句块：
+
+- **父类静态变量、静态语句块**
+- **子类静态变量、静态语句块**
+- **父类实例变量、普通语句块**
+- **父类构造函数**
+- **子类实例变量、普通语句块**
+- **子类构造函数**
+
+###### final
+
+若是基本数据类型，则数值不可变
+
+若是引用类型则引用不可变
+
+若是方法，则不能被重写
+
+若是类则无法被继承
