--- a/_posts/2021-6-18-虚拟机.md
+++ b/_posts/2021-6-18-虚拟机.md
@@ -407,6 +407,10 @@ G1指定的停顿时间是不是越短越好？
 
 ##### 虚拟机实战：内存分配与回收策略
 
+###### 内存泄漏
+
+对象已经没有被应用程序使用，但是垃圾回收器没有办法移除它们，因为还在被引用。
+
 ###### 内存分配
 
 - 对象优先在Eden分配
@@ -433,16 +437,12 @@ G1指定的停顿时间是不是越短越好？
 ###### 什么时候会发生Full GC
 
 1. 老年代最大可用的连续空间小于新生代所有对象总空间，且虚拟机参数设置值不允许担保失败，则Full GC,或者允许担保失败，则检查老年代最大可用空间是否大于历次晋升到老年代对象的平均大小，如果小于也要进行Full GC.
-
 2. 调用System.gc().
-
-3. 未指定老年代和新生代大小.
-
-4. 老年代空间不足,如比如大对象、大数组直接进入老年代、长期存活的对象进入老年代等。 
-
-5. JDK 1.7 及以前的（永久代）空间满，在 JDK 1.7 及以前，HotSpot 虚拟机中的方法区是用永久代实现的，永久代中存放的为一些 Class 的信息、常量、静态变量等数据。当系统中要加载的类、反射的类和调用的方法较多时，永久代可能会被占满，在未配置为采用 CMS GC 的情况下也会执行 Full GC。
-
-6. Metaspace区内存达到阈值
+3. 内存泄漏
+4. 未指定老年代和新生代大小.
+5. 老年代空间不足,如比如大对象、大数组直接进入老年代、长期存活的对象进入老年代等。 
+6. JDK 1.7 及以前的（永久代）空间满，在 JDK 1.7 及以前，HotSpot 虚拟机中的方法区是用永久代实现的，永久代中存放的为一些 Class 的信息、常量、静态变量等数据。当系统中要加载的类、反射的类和调用的方法较多时，永久代可能会被占满，在未配置为采用 CMS GC 的情况下也会执行 Full GC。
+7. Metaspace区内存达到阈值
 
 #### 讲一讲类加载机制
 
