--- a/_posts/2021-6-18-Mysql.md
+++ b/_posts/2021-6-18-Mysql.md
@@ -519,6 +519,49 @@ innodb辅助索引为什么存主键id，回表不是浪费时间吗？
 - 全表更新：事务需要更新大部分或全部数据，且表又比较大。若使用行锁，会导致事务执行效率低，从而可能造成其他事务长时间锁等待和更多的锁冲突。
 - 多表查询：事务涉及多个表，比较复杂的关联查询，很可能引起死锁，造成大量事务回滚。这种情况若能一次性锁定事务涉及的表，从而可以避免死锁、减少数据库因事务回滚带来的开销。
 
+###### explain指标
+
+**使用explain关键字可以模拟优化器执行SQL查询语句，从而知道MySQL是如何处理你的SQL语句的，分析你的查询语句或是表结构的性能瓶颈。**
+
+**id、type、key、rows、Extra**
+
+- id
+
+select查询的序列号，包含一组数字，表示查询中执行select子句或操作表的顺序
+
+- select_type
+
+查询的类型，主要是用于区分普通查询、联合查询、子查询等复杂的查询
+
+- type
+
+ 访问类型
+
+- key
+
+实际使用的索引，如果为NULL，则没有使用索引。
+
+- rows
+
+根据表统计信息及索引选用情况，大致估算出找到所需的记录所需要读取的行数
+
+- Extra
+
+不适合在其他字段中显示，但是十分重要的额外信息
+
+###### 慢查询
+
+MySQL的慢查询，全名是慢查询日志，是MySQL提供的一种日志记录，用来记录在MySQL中响应时间超过阀值的语句。
+
+具体环境中，运行时间超过long_query_time值的SQL语句，则会被记录到慢查询日志中。
+
+long_query_time的默认值为10，意思是记录运行10秒以上的语句。
+
+默认情况下，MySQL数据库并不启动慢查询日志，需要手动来设置这个参数。
+
+- slow_query_log：是否开启慢查询日志，1表示开启，0表示关闭。
+- long_query_time：慢查询阈值，当查询时间多于设定的阈值时，记录日志。
+
 ##### 数据库comment表的内容
 
 id:主键
