--- a/_posts/2020-11-2-Spring.md
+++ b/_posts/2020-11-2-Spring.md
@@ -269,3 +269,82 @@ CGlib代理
 
 通过外部调用的是方法A，虽然spring也会创建一个cglib的代理类去调用方法A，但当方法A调用方法B的时候，属于类里面的内部调用，使用的是实例对象本身去去调用方法B，非aop的cglib代理对象调用，方法B自然就不会进入到切面方法了。
 
+###### IOC的理解
+
+容器概念、控制反转、依赖注入
+
+IOC容器：实际上是一个map（key,value），里面存的是各种对象（在xml里配置的bean节点、@repository、@service、@controller、@component），在项目启动的时候会读取配置文件里面的bean节点或者注解的类，根据全限定类名使用反射创建对象放到map里。
+
+这时map里就有各种对象了，在代码中需要用到里面的对象时，再通过依赖注入（Autowired、resource等注解）
+
+DI：
+
+没有引入IOC容器时，对象A依赖于对象B，在对象A初始化或运行到某一点的时候，必须主动去创建对象B或使用已创建的对象B，无论创建还是使用权都在自己手上。
+
+引入IOC容器之后，对象A与对象B之间失去直接联系，当对象A运行到需要对象时，IOC容器会主动创建一个对象B注入到对象A需要的地方
+
+对象A获得依赖B的的过程由主动行为变成了被动行为，控制权发生了颠倒，所以称为控制反转。
+
+获得依赖对象的过程被反转了，获得依赖对象的过程由自身管理变成了由IOC容器主动注入，DI是实现IOC的方法，由IOC容器在运行期间，动态地将某种依赖关系注入到对象中。
+
+在实际项目中一个Service类可能依赖了很多其他的类，假如我们要实例化这个service，可能每一次都要弄清楚这个service所有底层类的构造函数。的但是如果利用IOC，只需要写好这个类配置好，在需要的地方引用就行了。
+
+假如你要做一个菜，你需要自己决定每种原料加入的顺序，他们之间就会有耦合，比如说一个原料必须在另外一个原料的前面或后面加入，但是现在有一个自动做菜的集器，你只要把原料准备好，放进去，他就能自动帮你做出你想要的菜品，他帮你确定原料之间的顺序关系，你只需要准备好原料，告诉我原料是什么，顺序是怎么样的就行了。在Spring中IOC容器就是这个自动做菜机，好处很明显，就是你只需要关注于业务本身，不需要知道他们之间的联系，因为IOC容器帮我们解决了。
+
+###### Spring Bean的生命周期
+
+- Bean容器找到配置文件中Spring Bean的定义
+- Bean容器利用Java Reflection API创建一个Bean的实例
+- 如果涉及到一些属性值利用set（）方法设置一些属性值
+- 如果Bean实现了BeanNameAware接口，调用setName（）方法，传入Bean的名字。
+- 如果Bean实现了BeanClassLoaderAware接口，调用setBeanClassLoader()方法。传入ClassLoader对象的实例。
+- 如果Bean实现了BeanFactoryAware接口，调用setBeanFactory()方法，传入BeanFactory()对象的实例
+
+- 与上面的类似，如果实现了其他 `*.Aware`接口，就调用相应的方法。
+- 如果有和加载这个 Bean 的 Spring 容器相关的 `BeanPostProcessor` 对象，执行`postProcessBeforeInitialization()` 方法
+- 如果 Bean 实现了`InitializingBean`接口，执行`afterPropertiesSet()`方法。
+- 如果 Bean 在配置文件中的定义包含 init-method 属性，执行指定的方法。
+- 如果有和加载这个 Bean 的 Spring 容器相关的 `BeanPostProcessor` 对象，执行`postProcessAfterInitialization()` 方法
+- 当要销毁 Bean 的时候，如果 Bean 实现了 `DisposableBean` 接口，执行 `destroy()` 方法。
+- 当要销毁 Bean 的时候，如果 Bean 在配置文件中的定义包含 destroy-method 属性，执行指定的方法。
+
+![Spring Bean 生命周期](https://cdn.jsdelivr.net/gh/nanxi1234/nanxi1234.github.io/image/2021/20210929160326.jpeg)
+
+###### Spring MVC
+
+- 客户端发送请求，直接请求到DispatcherServlet
+- DispatchServlet根据请求信息调用HandleMapping，解析请求对应的Handle
+- 解析到对应的Handle（controller）后，开始由HandleAdapter适配器处理
+- HandleAdapter会根据Handle来调用真正的处理器来处理请求，并处理业务逻辑
+- 处理器处理完业务后会返回一个ModelAndView对象，Model是返回的数据对象，View是个逻辑上的View。
+- ViewResolver会根据逻辑View查找实际的View
+- DispatchServlet把返回的Model传给View
+- 把View返回给请求者
+
+![img](https://cdn.jsdelivr.net/gh/nanxi1234/nanxi1234.github.io/image/2021/20210929161245.png)
+
+###### SpringBoot基本标签
+
+注解的作用：使用注解之后，就不需要在XML文件中进行复杂的配置，Spring在启动时会去扫描注解，并根据不同的注解会进行不同的操作。
+
+- @component
+
+将对象的创建权交给Spring容器，@Repository\@Service\Controler分别对应了持久层、服务层、表现层
+
+- @Required
+
+应用于Bean属性的setter方法上，使用该注解的属性必须在Bean的定义中或自动装配中必须赋予明确的属性值，如果没有赋予则容器就会抛出异常。
+
+- @Autowired
+
+按照类型自动装配，要求容器中一定有这个类的对象，如果没有就会报错
+
+- @Resources
+
+使用name和type进行自动装配，根据设置的条件到IOC容器中拿对象，如果容器中存在多个，或不存在则抛出异常。
+
+- @RequestMapping-将 HTTP 请求及其路径映射到控制器方法
+
+- @SpringBootApplication-启用 Spring Boot 自动配置和组件扫描。
+- @Bean-表示方法产生一个由 Spring 管理的 bean。
+
