--- a/_posts/2021-09-13-redis.md
+++ b/_posts/2021-09-13-redis.md
@@ -63,7 +63,7 @@ Redis内部使用文件事件处理器file event handler，这个文件处理器
 
 - 基于内存，内存的读写速度非常快
 - 单线程，保证了每个操作的原子性，省去了线程上下文切换的时间
-- 非阻塞IO，内部采用采用epoll，epoll中的读、写、关闭、连接都转化了事件，利用epoll的IO多路复用特性，避免IO代价，可以处理并发的连接。
+- 非阻塞IO，内部采用采用epoll，epoll中的读、写、关闭、连接都转化了事件，利用epoll的IO多路复用特性，可以处理并发的连接。
 
 ###### Io多路复用
 
@@ -149,9 +149,15 @@ RDB文件的载入工作是在服务器启动时自动执行的，所以Redis没
 
 - 为什么选择跳表实现有序集合
 - 哈希表是无序的，且只能查找单个 key，不适宜范围查找
-- 实现简单
+- 实现简单，插入删除时只需要调整相邻两个节点的指针，不用旋转节点，效率会高一点
 - 插入、删除、查找以及迭代输出有序序列这几个操作，红黑树也可以完成，时间复杂度跟跳表是一样的。但是，按照区间来查找数据这个操作，红黑树的效率没有跳表高（跳表只需要定位区间的起点，然后遍历就行了）
 - Redis 选跳表实现有序集合，还有其他各种原因，比如代码实现相对简单些，且更加灵活，它可以通过改变索引构建策略，有效平衡执行效率和内存消耗
+
+Map为什么用红黑树而不用链表？
+
+- 跳表需要维护额外的多层链表，是空间换时间的做法，红黑树不用占用多余的空间
+
+- HashMap的Entry并没有内在的排序关系，所以无法使用跳表，因为跳表要求存在排序关系
 
 ###### Redis的链表操作
 
