--- a/_posts/2020-11-2-DCS界面.md
+++ b/_posts/2020-11-2-DCS界面.md
@@ -262,3 +262,22 @@ if (!blLegalNumber) //表示优化计算是否成功的布尔量
 
 - WatchDog检查逻辑
 
+###### SCM可组态的Handle
+
+（1）  Check Handler：SCM激活或执行一个RESET命令或在Main、Stop和Abort Handler处理完成后执行。
+
+（2）  Main Handler：是SCM的主程序，SCM能包含多个Main Handler，当Main Handler激活且Transition条件满足（True）时自动执行，当Main Handler激活且发布START命令时手动执行。
+
+（3）  Interrupt Handler：就象MainHandler的一个子程序，当active Step的interrupt 条件满足或发布interrupt命令或InterruptHandler 激活且 Invoke Transition 条件满足时执行。
+
+（4）  Hold Handler：是一个异常的Handler，当发布HOLD命令或Hold Handler 激活且 Invoke Transition 条件满足时执行。
+
+  （5）Restart Handler：只能从Held状态开始执行，完成后直接进入Main Handler主程序。
+
+（6）  Stop Handler：是一个异常的Handler，当发布STOP命令或Stop Handler 激活且 Invoke Transition 条件满足时执行。
+
+（7）  Abort Handler：是一个异常的Handler，当发布ABORT命令或Abort Handler 激活且 Invoke Transition 条件满足时执行。
+
+通常我们组态的顺控程序放在Main Handler中，当SCM下装以后自动执行，
+
+ 
