--- a/_posts/2020-11-2-Spring.md
+++ b/_posts/2020-11-2-Spring.md
@@ -348,3 +348,54 @@ DI：
 - @SpringBootApplication-启用 Spring Boot 自动配置和组件扫描。
 - @Bean-表示方法产生一个由 Spring 管理的 bean。
 
+###### Spring事务
+
+- 事务
+
+逻辑上的一组操作，要么执行，要么都不执行
+
+事务能否生效取决于数据库是否支持事务，像Innodb就是支持事务的引擎，而Myisam就不支持
+
+```java
+REQUIRED(0),
+SUPPORTS(1),
+MANDATORY(2),
+REQUIRES_NEW(3),
+NOT_SUPPORTED(4),
+NEVER(5),
+NESTED(6);
+```
+
+事务的传播特性
+
+- REQUIRED
+
+如果当前存在事务，则加入事务，如果当前没有事务，则创建一个新的事务
+
+- SUPPORTS
+
+支持当前事务。如果当前有事务，就参与进来，如果没有，就以非事务的方式运行。
+
+- **`MANDATORY`**
+
+如果当前存在事务，则加入该事务；如果当前没有事务，则抛出异常
+
+- REQUIRED_NEW
+
+创建一个新的事务，如果当前存在事务，则把当前事务挂起，就是说不管外部方法是否开启事务，REQUIRED_NEW修饰的内部方法都会开启自己的事务。
+
+- NOT_SUPPORTED
+
+不支持当前事务。总是以非事务方式运行。
+
+- NEVER
+
+不支持当前事务。如果当前有事务存在，就抛出异常
+
+- NESTED
+
+1. 在外部方法未开启事务的情况下`Propagation.NESTED`和`Propagation.REQUIRED`作用相同，修饰的内部方法都会新开启自己的事务，且开启的事务相互独立，互不干扰。
+2. 如果外部方法开启事务的话，`Propagation.NESTED`修饰的内部方法属于外部事务的子事务，外部主事务回滚的话，子事务也会回滚，而内部子事务可以单独回滚而不影响外部主事务和其他子事务。
+
+
+
