--- a/_posts/2020-11-2-数据结构与算法.md
+++ b/_posts/2020-11-2-数据结构与算法.md
@@ -313,34 +313,14 @@ eg.    1010101010
 ![image-20210331161410162](https://cdn.jsdelivr.net/gh/nanxi1234/nanxi1234.github.io/image/2021/20210331161410.png)
 
 ```java
-package edu.princeton.cs.algs4;
-
-public class SortDemo4 {
-    
-          public static void merge(Comparable[] a,int lo,int mid,int hi)
-        {     Comparable[] aux=new Comparable[a.length];
-              int i=lo,j=mid+1;
-              for(int k=lo;k<=hi;k++)
-              {
-                  aux[k]=a[k];
-              }
-            for(int k=lo;k<=hi;k++)
-            {
-                if(i>mid) a[k]=a[j++];
-                else if(j>hi) a[k]=aux[i++];
-                else if(less(aux[j],aux[i])) a[k]=aux[j++];
-                else a[k]=aux[i++];
-            }
+class Solution {
+    private static int[] aux;//所需的辅助数组
+    public int[] sortArray(int[] nums) {
+        aux=new int[nums.length];
+        sort(nums,0,nums.length-1);
+        return nums;
     }
-    
-    private static Comparable[] aux;//所需的辅助数组
-    public static void sort(Comparable[] a)
-    {
-        aux=new Comparable[a.length];
-        sort(a,0,a.length-1);
-    }
-    
-    public static void sort(Comparable[] a,int lo,int hi)
+    public static void sort(int[] a,int lo,int hi)
     {
         //将数组a[lo...hi排序]
         if(hi<=lo) return;
@@ -349,40 +329,23 @@ public class SortDemo4 {
         sort(a,mid+1,hi);//右半边排序
         merge(a,lo,mid,hi);//归并
     }
-
-
-    private static boolean less(Comparable v,Comparable w)//测试是否有序
-    {
-        return v.compareTo(w)<0;//
-    }
-    private static void exch(Comparable[] a,int i,int j)//交换位置
-    {
-        Comparable t=a[i];a[i]=a[j];a[j]=t;
-    }
-    private static void show(Comparable[] a)//打印
-    {
-        for(int i=0;i<a.length;i++)
-            StdOut.print(a[i]+"");
-        StdOut.println();
-    }
-    public static boolean isSortd(Comparable[] a)//测试是否已有序
-    {
-        for(int i=1;i<a.length;i++) {
-            if (less(a[i], a[i - 1]))
-                return false;
+    public static void merge(int[] a,int lo,int mid,int hi)
+    {                
+        int[] aux=new int[a.length];
+         int i=lo,j=mid+1;
+        for(int k=lo;k<=hi;k++)
+        {
+            aux[k]=a[k];
         }
-            return true;
-        }
-        
-    public static void main(String[] args) {
-        String[] a = new In("tiny.txt").readAllStrings();
-        sort(a);
-        if(!isSortd(a))
-            System.out.println("false");
-          else show(a);
-
-    }
-}
+        for(int k=lo;k<=hi;k++)
+        {
+           if(i>mid) a[k]=a[j++];//左边用尽
+            else if(j>hi) a[k]=aux[i++];//右边用尽
+            else if(aux[j]<aux[i]) a[k]=aux[j++];//右小于左
+            else a[k]=aux[i++];//左小于右
+         }
+    }  
+} 
 ```
 
 改进：
@@ -400,12 +363,71 @@ public class SortDemo4 {
 
  归并排序和快速排序是互补的；归并排序将数组等分为两个子数组，分别将它们排序后再归并。而快速排序是选主元然后使左右两边都有序，整个数组自然就有序了。
 
-```java
+基本思想：先用partition()方法将a[j]放到一个合适的位置，然后递归调用将其他位置的元素排序。
 
+切分的关键：
+
+- 对于某个j，a[j]已经排定
+- a[lo]到a[j-1]中的所有元素都不大于a[j]
+- a[j+1]到a[hi]中的所有元素都不小于a[j]
+
+切分的实现：
+
+先随机取a[lo]作为切分元素，即那个将会被排定的元素，然后从数组的
+
+```java
+class Solution {
+    public int[] sortArray(int[] nums) {
+        int N = nums.length;
+        quicksort(nums,0,N-1);
+        return nums;
+    }
+
+    public void quicksort(int[] nums,int start,int end){
+        if(start < end){
+        int pivot =  randompartition(nums,start,end);//上一次切分排定了的a[j]
+
+        quicksort(nums,start,pivot-1);
+        quicksort(nums,pivot+1,end);
+        }        
+    }
+    public int randompartition(int[] nums,int start,int end){
+        int i = new Random().nextInt(end-start+1)+start;//随机切分
+
+        swap(nums,i,end);//将切分元素放到右端作为哨兵元素
+        return partition(nums,start,end);
+    }
+    public int partition(int[] nums,int start,int end){
+        int pivot = nums[end];
+        int lo = start-1;//被交换的起始点
+
+        for(int i = start;i<end;i++){
+            if(nums[i] <= pivot){//小于pivot则与lo交换
+               lo++;
+               swap(nums,i,lo);
+            }
+        }
+        swap(nums,end,lo+1);
+        return lo+1;
+    }
+    public void swap(int[] nums,int i,int j){
+        int temp = nums[i];
+        nums[i] = nums[j];
+        nums[j] = temp;
+    }
+}
 
 ```
 
+复杂度简单推导：
 
+假如每次都平分, 那么就有   (n + 2 * **(n/2)  +  4 \*** (n/4) .... + k  **n/k),   这就是总的执行次数.  就等于** 
+
+**k** * n 次.
+
+不管怎么平分, 一共执行 k 次, 所以就有  n * (1/2)^k = 1,  则有2^k = n, k = log2n(以二为底, n 的对数), 因为每次都需要执行大约 n 次移动, 所以有O(nlogn).
+
+最坏情况：每次切分都是从最小的元素切分，这样每次只会移除一个元素，导致一个大的数组需要切分很多次，复杂度为N^2^/2.
 
 #####  6.2.6 堆排序
 
@@ -420,66 +442,46 @@ public class SortDemo4 {
 如果堆的有序状态因为某个节点变得比它的两个子节点或是其中之一更小了而被打破。可以通过将它与子节点中的较大者交换来恢复堆。
 
 ```java
-//构造大根堆（通过新插入的数上升）
-public static void heapInsert(int[] arr) {
-    for (int i = 0; i < arr.length; i++) {
-        //当前插入的索引
-        int currentIndex = i;
-        //父结点索引
-        int fatherIndex = (currentIndex - 1) / 2;
-        //如果当前插入的值大于其父结点的值,则交换值，并且将索引指向父结点
-        //然后继续和上面的父结点值比较，直到不大于父结点，则退出循环
-        while (arr[currentIndex] > arr[fatherIndex]) {
-            //交换当前结点与父结点的值
-            swap(arr, currentIndex, fatherIndex);
-            //将当前索引指向父索引
-            currentIndex = fatherIndex;
-            //重新计算当前索引的父索引
-            fatherIndex = (currentIndex - 1) / 2;
+class Solution {
+    public int[] sortArray(int[] nums) {
+        int heapSize = nums.length;
+        buildMaxHeap(nums,heapSize);
+        for(int i = nums.length-1;i>=0;i--){
+            swap(nums,i,0);
+            --heapSize;
+            maxHeap(nums,heapSize,0);
+        }
+        return nums;
+    }
+    public void buildMaxHeap(int[] nums,int heapSize){
+        for(int i = heapSize/2;i>=0;i--){
+            maxHeap(nums,heapSize,i);
         }
     }
-}
-```
-
-```java
-public static void heapify(int[] arr, int index, int size) {//下沉排序
-    int left = 2 * index + 1;
-    int right = 2 * index + 2;
-    while (left < size) {
-        int largestIndex;
-        //判断孩子中较大的值的索引（要确保右孩子在size范围之内）
-        if (arr[left] < arr[right] && right < size) {
-            largestIndex = right;
-        } else {
-            largestIndex = left;
-        }
-        //比较父结点的值与孩子中较大的值，并确定最大值的索引
-        if (arr[index] > arr[largestIndex]) {
-            largestIndex = index;
-        }
-        //如果父结点索引是最大值的索引，那已经是大根堆了，则退出循环
-        if (index == largestIndex) {
-            break;
-        }
-        //父结点不是最大值，与孩子中较大的值交换
-        swap(arr, largestIndex, index);
-        //将索引指向孩子中较大的值的索引
-        index = largestIndex;
-        //重新计算交换之后的孩子的索引
-        left = 2 * index + 1;
-        right = 2 * index + 2;
+    
+    public void maxHeap(int[] nums,int heapSize,int i){
+        int largest = i,left = i*2+1,right = 2*i+2;
+         if(left < heapSize && nums[left] > nums[largest]){
+            largest = left;
+         }
+         if(right < heapSize && nums[right] > nums[largest]){
+             largest = right;
+         }
+         if(i != largest){
+             swap(nums,i,largest);
+             maxHeap(nums,heapSize,largest);
+         }
     }
 
+    public void swap(int[] nums,int a,int b){
+            int temp = nums[a];
+            nums[a] = nums[b];
+            nums[b] = temp;
+        }
 }
 ```
 
-```java
-public static void swap(int[] arr, int i, int j) {//和两个孩子中较大的孩子交换
-    int temp = arr[i];
-    arr[i] = arr[j];
-    arr[j] = temp;
-}
-```
+
 
 #### 7.树
 
