--- a/_posts/2021-6-18-Mysql.md
+++ b/_posts/2021-6-18-Mysql.md
@@ -562,6 +562,38 @@ long_query_time的默认值为10，意思是记录运行10秒以上的语句。
 - slow_query_log：是否开启慢查询日志，1表示开启，0表示关闭。
 - long_query_time：慢查询阈值，当查询时间多于设定的阈值时，记录日志。
 
+###### 手动建表
+
+创建一张学生表，学生大概10000人，包含，学生学号、学生名字、学生性别、学生住址，需要选择合理的类型
+
+```mysql
+CREATE TABLE IF NOT EXISTS 'students'{
+    'student_id' SMALLINT AUTO_INCREMENT NOT NULL,
+    'name' varchar(20) not null,
+    'age' TINYINT NOT NULL,
+    'sex' bit default 1,
+    'birth' datetime not null,
+    'address' varchar(255) not null,
+    PRIMARY KEY('student_id')
+}ENGINE=InnoDB default CHARSET = UTF-8;
+```
+
+id：10000 人-可以采用 smallint 进行标识
+
+name：  名字最长也就20个
+
+age ： 肯定小于100岁， 可采用 TINYINT 进行标识
+
+sex: 用一个bit 就可以进行标识
+
+birth 需要采用日期
+
+地址： 一般采用 varchar （255）
+
+设定自增 和 主键
+
+
+
 ##### 数据库comment表的内容
 
 id:主键
