--- a/_posts/2020-11-2-设计模式.md
+++ b/_posts/2020-11-2-设计模式.md
@@ -5,6 +5,25 @@ tags:
 
 #### Head First设计模式YYDS
 
+##### 设计原则
+
+- 找到应用中可能需要变化之处，把它们独立出来，不要与那些不变的代码混在一起
+
+​     把会变化的部分取出并封装起来，好让其他部分不受影响
+
+​     代码变化引起的不经意后果变少，系统更有弹性
+
+- 针对接口编程，而不是针对实现编程
+- 多用组合，少用继承
+
+​     继承深度过深，过复杂，会影响到代码的可维护性，可读性变差，另一方面，这也破坏了类的封装特性，将父类的实现细节暴露给了子类。子类的实现依赖父类的实现，两者高度耦合，一旦父类代码修改，就会影响所有子类的逻辑。而组合实际上是一种更细粒度的类的划分，这也就意味着，我们要定义更多的类和接口。类和接口的增多也就或多或少地增加代码的复杂程度和维护成本。
+
+
+
+
+
+
+
 ##### 单例模式 Singleton Pattern
 
 作用：确保一个类只有一个单例，并提供一个安全的全局访问点
@@ -67,9 +86,9 @@ public class Singleton {
    private Singleton(){}
 
    public static getInstance(){
-   if(uniqueInstance == null){
+   if(uniqueInstance == null){//保证线程在获取锁之前，对象还未创建，如果已创建，就不需要加锁，直接返回单例对象即可
    synchronized (Singleton.class){
-     if(uniqueInstance == null){//避免再次实例化
+     if(uniqueInstance == null){//线程获取锁后，再次判断在获取锁的期间中，实例是否创建，避免再次实例化
       uniqueInstance = new Singleton();
         }
      }
@@ -79,7 +98,15 @@ public class Singleton {
  }
 ```
 
-Volatile关键词确保：当uniqueInstance变量被初始化成singleton实例时，多个线程正确地处理uniqueInstance变量，禁止重排序避免在线程A没完成变量初始化的情况下线程B看到instance已经赋值就拿来使用，因为instance没有完成初始化，所以使用过程中可能产生无法预料的后果。性能上比sychronized要好。
+Volatile关键词确保：
+
+在创建单例对象时，并非是一个原子操作，在JVM中大概做了下面3件事：
+
+- 给instance分配内存
+- 调用Singleton的构造函数来初始化成员变量
+- 将instance对象指向分配的内存空间（执行完这一步instance就是非null了）
+
+当uniqueInstancne变量被初始化成singleton实例时，多个线程正确地处理uniqueInstance变量，**禁止重排序避免在线程A没完成变量初始化的情况下线程B看到instance已经赋值就拿来使用，因为instance没有完成初始化，所以使用过程中可能产生无法预料的后果**。性能上比synchronized要好。
 
 ##### 工厂模式 Factory Pattern
 
@@ -248,3 +275,12 @@ RMI(Remote Method Invocation)提供了所有运行时的基础设施，将客户
   动态代理：java.lang.reflect包中有自己的代理支持，利用这个包你可以在运行时动态地创建一个代理类，实现一个或多个接口，并将方法的调用转发到你指定的类，因为实际的类是在运行时创建的，因此称为动态代理。
 
   控制对对象的访问，保证安全。
+
+###### 原型模式
+
+
+
+###### 装饰者模式
+
+
+
